// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`exporters.motion > comet × illustrator-classes.svg 1`] = `
""use client";

import {
  type AnimationOptions,
  type AnimationPlaybackControls,
  type DOMKeyframesDefinition,
  useAnimate,
  useReducedMotion,
} from "motion/react";
import { useEffect, useRef } from "react";

// Generated by strokit. Colors follow --sk-stroke; prefers-reduced-motion shows the final frame.
const css = \`
.sk-1k6vic1-0 {
  stroke: var(--sk-stroke, #E30613);
  stroke-width: 4;
  fill-opacity: 0.2;
  stroke-dasharray: 0.2 0.8;
  stroke-dashoffset: 1;
}
.sk-1k6vic1-1 {
  stroke: var(--sk-stroke, #1D1D1B);
  stroke-dasharray: 0.2 0.8;
  stroke-dashoffset: 1;
}
.sk-1k6vic1-2 {
  stroke: var(--sk-stroke, #2563eb);
  stroke-width: 4;
  fill-opacity: 0.2;
  stroke-dasharray: 0.2 0.8;
  stroke-dashoffset: 1;
}
.sk-1k6vic1-3 {
  stroke: var(--sk-stroke, #10b981);
  stroke-dasharray: 0.2 0.8;
  stroke-dashoffset: 1;
}
@media (prefers-reduced-motion: reduce) {
  .sk-1k6vic1 * {
    animation: none;
  }
  .sk-1k6vic1-0 {
    stroke-dasharray: none;
    fill-opacity: 1;
  }
  .sk-1k6vic1-1 {
    stroke-dasharray: none;
  }
  .sk-1k6vic1-2 {
    stroke-dasharray: none;
    fill-opacity: 1;
  }
  .sk-1k6vic1-3 {
    stroke-dasharray: none;
  }
}
\`;

type Track = { selector: string; keyframes: DOMKeyframesDefinition; options: AnimationOptions };

const tracks: Track[] = [
  {
    selector: ".sk-1k6vic1-0",
    keyframes: {
      strokeDashoffset: [1, 0],
    },
    options: {
      duration: 1.6,
      delay: 0,
      ease: "linear",
      times: [0, 1],
      repeat: Number.POSITIVE_INFINITY,
      repeatType: "loop",
    },
  },
  {
    selector: ".sk-1k6vic1-1",
    keyframes: {
      strokeDashoffset: [1, 0],
    },
    options: {
      duration: 1.6,
      delay: 0,
      ease: "linear",
      times: [0, 1],
      repeat: Number.POSITIVE_INFINITY,
      repeatType: "loop",
    },
  },
  {
    selector: ".sk-1k6vic1-2",
    keyframes: {
      strokeDashoffset: [1, 0],
    },
    options: {
      duration: 1.6,
      delay: 0,
      ease: "linear",
      times: [0, 1],
      repeat: Number.POSITIVE_INFINITY,
      repeatType: "loop",
    },
  },
  {
    selector: ".sk-1k6vic1-3",
    keyframes: {
      strokeDashoffset: [1, 0],
    },
    options: {
      duration: 1.6,
      delay: 0,
      ease: "linear",
      times: [0, 1],
      repeat: Number.POSITIVE_INFINITY,
      repeatType: "loop",
    },
  },
];

export type TestLogoProps = {
  /** Width and height (number = px). Defaults to the SVG's own size. */
  size?: number | string;
  /** Playback speed multiplier: 2 plays twice as fast. */
  speed?: number;
  /** true repeats forever, false plays once. Defaults to the exported animation. */
  loop?: boolean;
  paused?: boolean;
  className?: string;
  /** Accessible name. Defaults to "Logo". */
  label?: string;
};

export function TestLogo({
  size,
  speed = 1,
  loop,
  paused = false,
  className,
  label = "Logo",
}: TestLogoProps) {
  const [scope, animate] = useAnimate<SVGSVGElement>();
  const reducedMotion = useReducedMotion();
  const controls = useRef<AnimationPlaybackControls[]>([]);

  useEffect(() => {
    if (reducedMotion) return;
    controls.current = tracks.map((track) =>
      animate(track.selector, track.keyframes, {
        ...track.options,
        ...(loop === undefined ? {} : { repeat: loop ? Number.POSITIVE_INFINITY : 0 }),
      }),
    );
    return () => {
      for (const control of controls.current) control.stop();
      controls.current = [];
    };
  }, [animate, loop, reducedMotion]);

  useEffect(() => {
    for (const control of controls.current) {
      control.speed = speed;
      if (paused) control.pause();
      else control.play();
    }
  }, [speed, paused, loop, reducedMotion]);

  return (
    <svg
      viewBox="0 0 200 100"
      id="Layer_1"
      width={size}
      height={size}
      className={className ? \`sk-1k6vic1 \${className}\` : "sk-1k6vic1"}
      ref={scope}
      role="img"
      aria-label={label}
    >
      <style>{css}</style>
      <path d="M10 90 L40 10 L70 90 Z" fill="#E30613" pathLength="1" className="sk-1k6vic1-0" />
      <polyline points="80,90 110,10 140,90" fill="none" stroke="#1D1D1B" strokeWidth="4" strokeMiterlimit="10" pathLength="1" className="sk-1k6vic1-1" />
      <path d="M150 90 L190 10" fill="none" stroke="#1D1D1B" strokeWidth="5" strokeMiterlimit="10" pathLength="1" className="sk-1k6vic1-1" />
      <ellipse id="accent" cx="170" cy="70" rx="12" ry="8" fill="#2563eb" pathLength="1" className="sk-1k6vic1-2" />
      <line x1="10" y1="95" x2="190" y2="95" fill="none" stroke="#10b981" strokeWidth="4" strokeMiterlimit="10" pathLength="1" className="sk-1k6vic1-3" />
    </svg>
  );
}
"
`;

exports[`exporters.motion > comet × simple-stroke.svg 1`] = `
""use client";

import {
  type AnimationOptions,
  type AnimationPlaybackControls,
  type DOMKeyframesDefinition,
  useAnimate,
  useReducedMotion,
} from "motion/react";
import { useEffect, useRef } from "react";

// Generated by strokit. Colors follow --sk-stroke; prefers-reduced-motion shows the final frame.
const css = \`
.sk-1s7x3yk-0 {
  stroke: var(--sk-stroke, #1d4ed8);
  stroke-dasharray: 0.2 0.8;
  stroke-dashoffset: 1;
}
@media (prefers-reduced-motion: reduce) {
  .sk-1s7x3yk * {
    animation: none;
  }
  .sk-1s7x3yk-0 {
    stroke-dasharray: none;
  }
}
\`;

type Track = { selector: string; keyframes: DOMKeyframesDefinition; options: AnimationOptions };

const tracks: Track[] = [
  {
    selector: ".sk-1s7x3yk-0",
    keyframes: {
      strokeDashoffset: [1, 0],
    },
    options: {
      duration: 1.6,
      delay: 0,
      ease: "linear",
      times: [0, 1],
      repeat: Number.POSITIVE_INFINITY,
      repeatType: "loop",
    },
  },
];

export type TestLogoProps = {
  /** Width and height (number = px). Defaults to the SVG's own size. */
  size?: number | string;
  /** Playback speed multiplier: 2 plays twice as fast. */
  speed?: number;
  /** true repeats forever, false plays once. Defaults to the exported animation. */
  loop?: boolean;
  paused?: boolean;
  className?: string;
  /** Accessible name. Defaults to "Logo". */
  label?: string;
};

export function TestLogo({
  size,
  speed = 1,
  loop,
  paused = false,
  className,
  label = "Logo",
}: TestLogoProps) {
  const [scope, animate] = useAnimate<SVGSVGElement>();
  const reducedMotion = useReducedMotion();
  const controls = useRef<AnimationPlaybackControls[]>([]);

  useEffect(() => {
    if (reducedMotion) return;
    controls.current = tracks.map((track) =>
      animate(track.selector, track.keyframes, {
        ...track.options,
        ...(loop === undefined ? {} : { repeat: loop ? Number.POSITIVE_INFINITY : 0 }),
      }),
    );
    return () => {
      for (const control of controls.current) control.stop();
      controls.current = [];
    };
  }, [animate, loop, reducedMotion]);

  useEffect(() => {
    for (const control of controls.current) {
      control.speed = speed;
      if (paused) control.pause();
      else control.play();
    }
  }, [speed, paused, loop, reducedMotion]);

  return (
    <svg
      viewBox="0 0 120 120"
      width={size ?? 120}
      height={size ?? 120}
      className={className ? \`sk-1s7x3yk \${className}\` : "sk-1s7x3yk"}
      ref={scope}
      role="img"
      aria-label={label}
    >
      <style>{css}</style>
      <title>{"Anel e seta"}</title>
      <g fill="none" stroke="#1d4ed8" strokeWidth="6" strokeLinecap="round">
        <circle cx="60" cy="60" r="44" pathLength="1" className="sk-1s7x3yk-0" />
        <path d="M36 64 L56 84 L88 40" pathLength="1" className="sk-1s7x3yk-0" />
      </g>
    </svg>
  );
}
"
`;

exports[`exporters.motion > draw-fill × illustrator-classes.svg 1`] = `
""use client";

import {
  type AnimationOptions,
  type AnimationPlaybackControls,
  type DOMKeyframesDefinition,
  useAnimate,
  useReducedMotion,
} from "motion/react";
import { useEffect, useRef } from "react";

// Generated by strokit. Colors follow --sk-stroke; prefers-reduced-motion shows the final frame.
const css = \`
.sk-ea1tib-0 {
  stroke: var(--sk-stroke, #E30613);
  stroke-width: 4;
  stroke-dasharray: 1 1;
  stroke-dashoffset: 1;
  fill-opacity: 0;
}
.sk-ea1tib-1 {
  stroke: var(--sk-stroke, #1D1D1B);
  stroke-dasharray: 1 1;
  stroke-dashoffset: 1;
  fill-opacity: 0;
}
.sk-ea1tib-2 {
  stroke: var(--sk-stroke, #2563eb);
  stroke-width: 4;
  stroke-dasharray: 1 1;
  stroke-dashoffset: 1;
  fill-opacity: 0;
}
.sk-ea1tib-3 {
  stroke: var(--sk-stroke, #10b981);
  stroke-dasharray: 1 1;
  stroke-dashoffset: 1;
  fill-opacity: 0;
}
@media (prefers-reduced-motion: reduce) {
  .sk-ea1tib * {
    animation: none;
  }
  .sk-ea1tib-0 {
    stroke-dashoffset: 0;
    fill-opacity: 1;
  }
  .sk-ea1tib-1 {
    stroke-dashoffset: 0;
    fill-opacity: 1;
  }
  .sk-ea1tib-2 {
    stroke-dashoffset: 0;
    fill-opacity: 1;
  }
  .sk-ea1tib-3 {
    stroke-dashoffset: 0;
    fill-opacity: 1;
  }
}
\`;

type Track = { selector: string; keyframes: DOMKeyframesDefinition; options: AnimationOptions };

const tracks: Track[] = [
  {
    selector: ".sk-ea1tib-0",
    keyframes: {
      strokeDashoffset: [1, 0, 0],
      fillOpacity: [0, 0, 1],
    },
    options: {
      duration: 2,
      delay: 0,
      ease: "easeInOut",
      times: [0, 0.6, 1],
      repeat: 0,
      repeatType: "loop",
    },
  },
  {
    selector: ".sk-ea1tib-1",
    keyframes: {
      strokeDashoffset: [1, 0, 0],
      fillOpacity: [0, 0, 1],
    },
    options: {
      duration: 2,
      delay: 0,
      ease: "easeInOut",
      times: [0, 0.6, 1],
      repeat: 0,
      repeatType: "loop",
    },
  },
  {
    selector: ".sk-ea1tib-2",
    keyframes: {
      strokeDashoffset: [1, 0, 0],
      fillOpacity: [0, 0, 1],
    },
    options: {
      duration: 2,
      delay: 0,
      ease: "easeInOut",
      times: [0, 0.6, 1],
      repeat: 0,
      repeatType: "loop",
    },
  },
  {
    selector: ".sk-ea1tib-3",
    keyframes: {
      strokeDashoffset: [1, 0, 0],
      fillOpacity: [0, 0, 1],
    },
    options: {
      duration: 2,
      delay: 0,
      ease: "easeInOut",
      times: [0, 0.6, 1],
      repeat: 0,
      repeatType: "loop",
    },
  },
];

export type TestLogoProps = {
  /** Width and height (number = px). Defaults to the SVG's own size. */
  size?: number | string;
  /** Playback speed multiplier: 2 plays twice as fast. */
  speed?: number;
  /** true repeats forever, false plays once. Defaults to the exported animation. */
  loop?: boolean;
  paused?: boolean;
  className?: string;
  /** Accessible name. Defaults to "Logo". */
  label?: string;
};

export function TestLogo({
  size,
  speed = 1,
  loop,
  paused = false,
  className,
  label = "Logo",
}: TestLogoProps) {
  const [scope, animate] = useAnimate<SVGSVGElement>();
  const reducedMotion = useReducedMotion();
  const controls = useRef<AnimationPlaybackControls[]>([]);

  useEffect(() => {
    if (reducedMotion) return;
    controls.current = tracks.map((track) =>
      animate(track.selector, track.keyframes, {
        ...track.options,
        ...(loop === undefined ? {} : { repeat: loop ? Number.POSITIVE_INFINITY : 0 }),
      }),
    );
    return () => {
      for (const control of controls.current) control.stop();
      controls.current = [];
    };
  }, [animate, loop, reducedMotion]);

  useEffect(() => {
    for (const control of controls.current) {
      control.speed = speed;
      if (paused) control.pause();
      else control.play();
    }
  }, [speed, paused, loop, reducedMotion]);

  return (
    <svg
      viewBox="0 0 200 100"
      id="Layer_1"
      width={size}
      height={size}
      className={className ? \`sk-ea1tib \${className}\` : "sk-ea1tib"}
      ref={scope}
      role="img"
      aria-label={label}
    >
      <style>{css}</style>
      <path d="M10 90 L40 10 L70 90 Z" fill="#E30613" pathLength="1" className="sk-ea1tib-0" />
      <polyline points="80,90 110,10 140,90" fill="none" stroke="#1D1D1B" strokeWidth="4" strokeMiterlimit="10" pathLength="1" className="sk-ea1tib-1" />
      <path d="M150 90 L190 10" fill="none" stroke="#1D1D1B" strokeWidth="5" strokeMiterlimit="10" pathLength="1" className="sk-ea1tib-1" />
      <ellipse id="accent" cx="170" cy="70" rx="12" ry="8" fill="#2563eb" pathLength="1" className="sk-ea1tib-2" />
      <line x1="10" y1="95" x2="190" y2="95" fill="none" stroke="#10b981" strokeWidth="4" strokeMiterlimit="10" pathLength="1" className="sk-ea1tib-3" />
    </svg>
  );
}
"
`;

exports[`exporters.motion > draw-fill × simple-stroke.svg 1`] = `
""use client";

import {
  type AnimationOptions,
  type AnimationPlaybackControls,
  type DOMKeyframesDefinition,
  useAnimate,
  useReducedMotion,
} from "motion/react";
import { useEffect, useRef } from "react";

// Generated by strokit. Colors follow --sk-stroke; prefers-reduced-motion shows the final frame.
const css = \`
.sk-1jr4qne-0 {
  stroke: var(--sk-stroke, #1d4ed8);
  stroke-dasharray: 1 1;
  stroke-dashoffset: 1;
  fill-opacity: 0;
}
@media (prefers-reduced-motion: reduce) {
  .sk-1jr4qne * {
    animation: none;
  }
  .sk-1jr4qne-0 {
    stroke-dashoffset: 0;
    fill-opacity: 1;
  }
}
\`;

type Track = { selector: string; keyframes: DOMKeyframesDefinition; options: AnimationOptions };

const tracks: Track[] = [
  {
    selector: ".sk-1jr4qne-0",
    keyframes: {
      strokeDashoffset: [1, 0, 0],
      fillOpacity: [0, 0, 1],
    },
    options: {
      duration: 2,
      delay: 0,
      ease: "easeInOut",
      times: [0, 0.6, 1],
      repeat: 0,
      repeatType: "loop",
    },
  },
];

export type TestLogoProps = {
  /** Width and height (number = px). Defaults to the SVG's own size. */
  size?: number | string;
  /** Playback speed multiplier: 2 plays twice as fast. */
  speed?: number;
  /** true repeats forever, false plays once. Defaults to the exported animation. */
  loop?: boolean;
  paused?: boolean;
  className?: string;
  /** Accessible name. Defaults to "Logo". */
  label?: string;
};

export function TestLogo({
  size,
  speed = 1,
  loop,
  paused = false,
  className,
  label = "Logo",
}: TestLogoProps) {
  const [scope, animate] = useAnimate<SVGSVGElement>();
  const reducedMotion = useReducedMotion();
  const controls = useRef<AnimationPlaybackControls[]>([]);

  useEffect(() => {
    if (reducedMotion) return;
    controls.current = tracks.map((track) =>
      animate(track.selector, track.keyframes, {
        ...track.options,
        ...(loop === undefined ? {} : { repeat: loop ? Number.POSITIVE_INFINITY : 0 }),
      }),
    );
    return () => {
      for (const control of controls.current) control.stop();
      controls.current = [];
    };
  }, [animate, loop, reducedMotion]);

  useEffect(() => {
    for (const control of controls.current) {
      control.speed = speed;
      if (paused) control.pause();
      else control.play();
    }
  }, [speed, paused, loop, reducedMotion]);

  return (
    <svg
      viewBox="0 0 120 120"
      width={size ?? 120}
      height={size ?? 120}
      className={className ? \`sk-1jr4qne \${className}\` : "sk-1jr4qne"}
      ref={scope}
      role="img"
      aria-label={label}
    >
      <style>{css}</style>
      <title>{"Anel e seta"}</title>
      <g fill="none" stroke="#1d4ed8" strokeWidth="6" strokeLinecap="round">
        <circle cx="60" cy="60" r="44" pathLength="1" className="sk-1jr4qne-0" />
        <path d="M36 64 L56 84 L88 40" pathLength="1" className="sk-1jr4qne-0" />
      </g>
    </svg>
  );
}
"
`;

exports[`exporters.motion > fade × illustrator-classes.svg 1`] = `
""use client";

import {
  type AnimationOptions,
  type AnimationPlaybackControls,
  type DOMKeyframesDefinition,
  useAnimate,
  useReducedMotion,
} from "motion/react";
import { useEffect, useRef } from "react";

// Generated by strokit. Colors follow --sk-stroke; prefers-reduced-motion shows the final frame.
const css = \`
.sk-1jz44ef-0 {
  opacity: 0;
  transform: translate(0px, 8px);
}
@media (prefers-reduced-motion: reduce) {
  .sk-1jz44ef * {
    animation: none;
  }
  .sk-1jz44ef-0 {
    opacity: 1;
    transform: none;
  }
}
\`;

type Track = { selector: string; keyframes: DOMKeyframesDefinition; options: AnimationOptions };

const tracks: Track[] = [
  {
    selector: ".sk-1jz44ef-0",
    keyframes: {
      opacity: [0, 1],
      transform: ["translate(0px, 8px)", "translate(0px, 0px)"],
    },
    options: {
      duration: 0.9,
      delay: 0,
      ease: "easeOut",
      times: [0, 1],
      repeat: 0,
      repeatType: "loop",
    },
  },
];

export type TestLogoProps = {
  /** Width and height (number = px). Defaults to the SVG's own size. */
  size?: number | string;
  /** Playback speed multiplier: 2 plays twice as fast. */
  speed?: number;
  /** true repeats forever, false plays once. Defaults to the exported animation. */
  loop?: boolean;
  paused?: boolean;
  className?: string;
  /** Accessible name. Defaults to "Logo". */
  label?: string;
};

export function TestLogo({
  size,
  speed = 1,
  loop,
  paused = false,
  className,
  label = "Logo",
}: TestLogoProps) {
  const [scope, animate] = useAnimate<SVGSVGElement>();
  const reducedMotion = useReducedMotion();
  const controls = useRef<AnimationPlaybackControls[]>([]);

  useEffect(() => {
    if (reducedMotion) return;
    controls.current = tracks.map((track) =>
      animate(track.selector, track.keyframes, {
        ...track.options,
        ...(loop === undefined ? {} : { repeat: loop ? Number.POSITIVE_INFINITY : 0 }),
      }),
    );
    return () => {
      for (const control of controls.current) control.stop();
      controls.current = [];
    };
  }, [animate, loop, reducedMotion]);

  useEffect(() => {
    for (const control of controls.current) {
      control.speed = speed;
      if (paused) control.pause();
      else control.play();
    }
  }, [speed, paused, loop, reducedMotion]);

  return (
    <svg
      viewBox="0 0 200 100"
      id="Layer_1"
      width={size}
      height={size}
      className={className ? \`sk-1jz44ef \${className}\` : "sk-1jz44ef"}
      ref={scope}
      role="img"
      aria-label={label}
    >
      <style>{css}</style>
      <path d="M10 90 L40 10 L70 90 Z" fill="#E30613" className="sk-1jz44ef-0" />
      <polyline points="80,90 110,10 140,90" fill="none" stroke="#1D1D1B" strokeWidth="4" strokeMiterlimit="10" className="sk-1jz44ef-0" />
      <path d="M150 90 L190 10" fill="none" stroke="#1D1D1B" strokeWidth="5" strokeMiterlimit="10" className="sk-1jz44ef-0" />
      <ellipse id="accent" cx="170" cy="70" rx="12" ry="8" fill="#2563eb" className="sk-1jz44ef-0" />
      <line x1="10" y1="95" x2="190" y2="95" fill="none" stroke="#10b981" strokeWidth="4" strokeMiterlimit="10" className="sk-1jz44ef-0" />
    </svg>
  );
}
"
`;

exports[`exporters.motion > fade × simple-stroke.svg 1`] = `
""use client";

import {
  type AnimationOptions,
  type AnimationPlaybackControls,
  type DOMKeyframesDefinition,
  useAnimate,
  useReducedMotion,
} from "motion/react";
import { useEffect, useRef } from "react";

// Generated by strokit. Colors follow --sk-stroke; prefers-reduced-motion shows the final frame.
const css = \`
.sk-1n6syys-0 {
  opacity: 0;
  transform: translate(0px, 9.6px);
}
@media (prefers-reduced-motion: reduce) {
  .sk-1n6syys * {
    animation: none;
  }
  .sk-1n6syys-0 {
    opacity: 1;
    transform: none;
  }
}
\`;

type Track = { selector: string; keyframes: DOMKeyframesDefinition; options: AnimationOptions };

const tracks: Track[] = [
  {
    selector: ".sk-1n6syys-0",
    keyframes: {
      opacity: [0, 1],
      transform: ["translate(0px, 9.6px)", "translate(0px, 0px)"],
    },
    options: {
      duration: 0.9,
      delay: 0,
      ease: "easeOut",
      times: [0, 1],
      repeat: 0,
      repeatType: "loop",
    },
  },
];

export type TestLogoProps = {
  /** Width and height (number = px). Defaults to the SVG's own size. */
  size?: number | string;
  /** Playback speed multiplier: 2 plays twice as fast. */
  speed?: number;
  /** true repeats forever, false plays once. Defaults to the exported animation. */
  loop?: boolean;
  paused?: boolean;
  className?: string;
  /** Accessible name. Defaults to "Logo". */
  label?: string;
};

export function TestLogo({
  size,
  speed = 1,
  loop,
  paused = false,
  className,
  label = "Logo",
}: TestLogoProps) {
  const [scope, animate] = useAnimate<SVGSVGElement>();
  const reducedMotion = useReducedMotion();
  const controls = useRef<AnimationPlaybackControls[]>([]);

  useEffect(() => {
    if (reducedMotion) return;
    controls.current = tracks.map((track) =>
      animate(track.selector, track.keyframes, {
        ...track.options,
        ...(loop === undefined ? {} : { repeat: loop ? Number.POSITIVE_INFINITY : 0 }),
      }),
    );
    return () => {
      for (const control of controls.current) control.stop();
      controls.current = [];
    };
  }, [animate, loop, reducedMotion]);

  useEffect(() => {
    for (const control of controls.current) {
      control.speed = speed;
      if (paused) control.pause();
      else control.play();
    }
  }, [speed, paused, loop, reducedMotion]);

  return (
    <svg
      viewBox="0 0 120 120"
      width={size ?? 120}
      height={size ?? 120}
      className={className ? \`sk-1n6syys \${className}\` : "sk-1n6syys"}
      ref={scope}
      role="img"
      aria-label={label}
    >
      <style>{css}</style>
      <title>{"Anel e seta"}</title>
      <g fill="none" stroke="#1d4ed8" strokeWidth="6" strokeLinecap="round">
        <circle cx="60" cy="60" r="44" className="sk-1n6syys-0" />
        <path d="M36 64 L56 84 L88 40" className="sk-1n6syys-0" />
      </g>
    </svg>
  );
}
"
`;

exports[`exporters.motion > march × illustrator-classes.svg 1`] = `
""use client";

import {
  type AnimationOptions,
  type AnimationPlaybackControls,
  type DOMKeyframesDefinition,
  useAnimate,
  useReducedMotion,
} from "motion/react";
import { useEffect, useRef } from "react";

// Generated by strokit. Colors follow --sk-stroke; prefers-reduced-motion shows the final frame.
const css = \`
.sk-17putps-0 {
  stroke: var(--sk-stroke, #E30613);
  stroke-width: 4;
  fill-opacity: 0.2;
  stroke-dasharray: 0.0408 0.0306;
  stroke-dashoffset: 0;
}
.sk-17putps-1 {
  stroke: var(--sk-stroke, #1D1D1B);
  stroke-dasharray: 0.0408 0.0306;
  stroke-dashoffset: 0;
}
.sk-17putps-2 {
  stroke: var(--sk-stroke, #2563eb);
  stroke-width: 4;
  fill-opacity: 0.2;
  stroke-dasharray: 0.0408 0.0306;
  stroke-dashoffset: 0;
}
.sk-17putps-3 {
  stroke: var(--sk-stroke, #10b981);
  stroke-dasharray: 0.0408 0.0306;
  stroke-dashoffset: 0;
}
@media (prefers-reduced-motion: reduce) {
  .sk-17putps * {
    animation: none;
  }
  .sk-17putps-0 {
    fill-opacity: 1;
  }
  .sk-17putps-2 {
    fill-opacity: 1;
  }
}
\`;

type Track = { selector: string; keyframes: DOMKeyframesDefinition; options: AnimationOptions };

const tracks: Track[] = [
  {
    selector: ".sk-17putps-0",
    keyframes: {
      strokeDashoffset: [0, -0.0714],
    },
    options: {
      duration: 0.8,
      delay: 0,
      ease: "linear",
      times: [0, 1],
      repeat: Number.POSITIVE_INFINITY,
      repeatType: "loop",
    },
  },
  {
    selector: ".sk-17putps-1",
    keyframes: {
      strokeDashoffset: [0, -0.0714],
    },
    options: {
      duration: 0.8,
      delay: 0,
      ease: "linear",
      times: [0, 1],
      repeat: Number.POSITIVE_INFINITY,
      repeatType: "loop",
    },
  },
  {
    selector: ".sk-17putps-2",
    keyframes: {
      strokeDashoffset: [0, -0.0714],
    },
    options: {
      duration: 0.8,
      delay: 0,
      ease: "linear",
      times: [0, 1],
      repeat: Number.POSITIVE_INFINITY,
      repeatType: "loop",
    },
  },
  {
    selector: ".sk-17putps-3",
    keyframes: {
      strokeDashoffset: [0, -0.0714],
    },
    options: {
      duration: 0.8,
      delay: 0,
      ease: "linear",
      times: [0, 1],
      repeat: Number.POSITIVE_INFINITY,
      repeatType: "loop",
    },
  },
];

export type TestLogoProps = {
  /** Width and height (number = px). Defaults to the SVG's own size. */
  size?: number | string;
  /** Playback speed multiplier: 2 plays twice as fast. */
  speed?: number;
  /** true repeats forever, false plays once. Defaults to the exported animation. */
  loop?: boolean;
  paused?: boolean;
  className?: string;
  /** Accessible name. Defaults to "Logo". */
  label?: string;
};

export function TestLogo({
  size,
  speed = 1,
  loop,
  paused = false,
  className,
  label = "Logo",
}: TestLogoProps) {
  const [scope, animate] = useAnimate<SVGSVGElement>();
  const reducedMotion = useReducedMotion();
  const controls = useRef<AnimationPlaybackControls[]>([]);

  useEffect(() => {
    if (reducedMotion) return;
    controls.current = tracks.map((track) =>
      animate(track.selector, track.keyframes, {
        ...track.options,
        ...(loop === undefined ? {} : { repeat: loop ? Number.POSITIVE_INFINITY : 0 }),
      }),
    );
    return () => {
      for (const control of controls.current) control.stop();
      controls.current = [];
    };
  }, [animate, loop, reducedMotion]);

  useEffect(() => {
    for (const control of controls.current) {
      control.speed = speed;
      if (paused) control.pause();
      else control.play();
    }
  }, [speed, paused, loop, reducedMotion]);

  return (
    <svg
      viewBox="0 0 200 100"
      id="Layer_1"
      width={size}
      height={size}
      className={className ? \`sk-17putps \${className}\` : "sk-17putps"}
      ref={scope}
      role="img"
      aria-label={label}
    >
      <style>{css}</style>
      <path d="M10 90 L40 10 L70 90 Z" fill="#E30613" pathLength="1" className="sk-17putps-0" />
      <polyline points="80,90 110,10 140,90" fill="none" stroke="#1D1D1B" strokeWidth="4" strokeMiterlimit="10" pathLength="1" className="sk-17putps-1" />
      <path d="M150 90 L190 10" fill="none" stroke="#1D1D1B" strokeWidth="5" strokeMiterlimit="10" pathLength="1" className="sk-17putps-1" />
      <ellipse id="accent" cx="170" cy="70" rx="12" ry="8" fill="#2563eb" pathLength="1" className="sk-17putps-2" />
      <line x1="10" y1="95" x2="190" y2="95" fill="none" stroke="#10b981" strokeWidth="4" strokeMiterlimit="10" pathLength="1" className="sk-17putps-3" />
    </svg>
  );
}
"
`;

exports[`exporters.motion > march × simple-stroke.svg 1`] = `
""use client";

import {
  type AnimationOptions,
  type AnimationPlaybackControls,
  type DOMKeyframesDefinition,
  useAnimate,
  useReducedMotion,
} from "motion/react";
import { useEffect, useRef } from "react";

// Generated by strokit. Colors follow --sk-stroke; prefers-reduced-motion shows the final frame.
const css = \`
.sk-1eykk4r-0 {
  stroke: var(--sk-stroke, #1d4ed8);
  stroke-dasharray: 0.0408 0.0306;
  stroke-dashoffset: 0;
}
@media (prefers-reduced-motion: reduce) {
  .sk-1eykk4r * {
    animation: none;
  }
}
\`;

type Track = { selector: string; keyframes: DOMKeyframesDefinition; options: AnimationOptions };

const tracks: Track[] = [
  {
    selector: ".sk-1eykk4r-0",
    keyframes: {
      strokeDashoffset: [0, -0.0714],
    },
    options: {
      duration: 0.8,
      delay: 0,
      ease: "linear",
      times: [0, 1],
      repeat: Number.POSITIVE_INFINITY,
      repeatType: "loop",
    },
  },
];

export type TestLogoProps = {
  /** Width and height (number = px). Defaults to the SVG's own size. */
  size?: number | string;
  /** Playback speed multiplier: 2 plays twice as fast. */
  speed?: number;
  /** true repeats forever, false plays once. Defaults to the exported animation. */
  loop?: boolean;
  paused?: boolean;
  className?: string;
  /** Accessible name. Defaults to "Logo". */
  label?: string;
};

export function TestLogo({
  size,
  speed = 1,
  loop,
  paused = false,
  className,
  label = "Logo",
}: TestLogoProps) {
  const [scope, animate] = useAnimate<SVGSVGElement>();
  const reducedMotion = useReducedMotion();
  const controls = useRef<AnimationPlaybackControls[]>([]);

  useEffect(() => {
    if (reducedMotion) return;
    controls.current = tracks.map((track) =>
      animate(track.selector, track.keyframes, {
        ...track.options,
        ...(loop === undefined ? {} : { repeat: loop ? Number.POSITIVE_INFINITY : 0 }),
      }),
    );
    return () => {
      for (const control of controls.current) control.stop();
      controls.current = [];
    };
  }, [animate, loop, reducedMotion]);

  useEffect(() => {
    for (const control of controls.current) {
      control.speed = speed;
      if (paused) control.pause();
      else control.play();
    }
  }, [speed, paused, loop, reducedMotion]);

  return (
    <svg
      viewBox="0 0 120 120"
      width={size ?? 120}
      height={size ?? 120}
      className={className ? \`sk-1eykk4r \${className}\` : "sk-1eykk4r"}
      ref={scope}
      role="img"
      aria-label={label}
    >
      <style>{css}</style>
      <title>{"Anel e seta"}</title>
      <g fill="none" stroke="#1d4ed8" strokeWidth="6" strokeLinecap="round">
        <circle cx="60" cy="60" r="44" pathLength="1" className="sk-1eykk4r-0" />
        <path d="M36 64 L56 84 L88 40" pathLength="1" className="sk-1eykk4r-0" />
      </g>
    </svg>
  );
}
"
`;

exports[`exporters.motion > pulse × illustrator-classes.svg 1`] = `
""use client";

import {
  type AnimationOptions,
  type AnimationPlaybackControls,
  type DOMKeyframesDefinition,
  useAnimate,
  useReducedMotion,
} from "motion/react";
import { useEffect, useRef } from "react";

// Generated by strokit. Colors follow --sk-stroke; prefers-reduced-motion shows the final frame.
const css = \`
.sk-136dki7-0 {
  transform-box: fill-box;
  transform-origin: center;
  opacity: 1;
  transform: scale(1);
}
@media (prefers-reduced-motion: reduce) {
  .sk-136dki7 * {
    animation: none;
  }
  .sk-136dki7-0 {
    opacity: 1;
    transform: none;
  }
}
\`;

type Track = { selector: string; keyframes: DOMKeyframesDefinition; options: AnimationOptions };

const tracks: Track[] = [
  {
    selector: ".sk-136dki7-0",
    keyframes: {
      opacity: [1, 0.5, 1],
      scale: [1, 1.06, 1],
    },
    options: {
      duration: 1.4,
      delay: 0,
      ease: "easeInOut",
      times: [0, 0.5, 1],
      repeat: Number.POSITIVE_INFINITY,
      repeatType: "loop",
    },
  },
];

export type TestLogoProps = {
  /** Width and height (number = px). Defaults to the SVG's own size. */
  size?: number | string;
  /** Playback speed multiplier: 2 plays twice as fast. */
  speed?: number;
  /** true repeats forever, false plays once. Defaults to the exported animation. */
  loop?: boolean;
  paused?: boolean;
  className?: string;
  /** Accessible name. Defaults to "Logo". */
  label?: string;
};

export function TestLogo({
  size,
  speed = 1,
  loop,
  paused = false,
  className,
  label = "Logo",
}: TestLogoProps) {
  const [scope, animate] = useAnimate<SVGSVGElement>();
  const reducedMotion = useReducedMotion();
  const controls = useRef<AnimationPlaybackControls[]>([]);

  useEffect(() => {
    if (reducedMotion) return;
    controls.current = tracks.map((track) =>
      animate(track.selector, track.keyframes, {
        ...track.options,
        ...(loop === undefined ? {} : { repeat: loop ? Number.POSITIVE_INFINITY : 0 }),
      }),
    );
    return () => {
      for (const control of controls.current) control.stop();
      controls.current = [];
    };
  }, [animate, loop, reducedMotion]);

  useEffect(() => {
    for (const control of controls.current) {
      control.speed = speed;
      if (paused) control.pause();
      else control.play();
    }
  }, [speed, paused, loop, reducedMotion]);

  return (
    <svg
      viewBox="0 0 200 100"
      id="Layer_1"
      width={size}
      height={size}
      className={className ? \`sk-136dki7 \${className}\` : "sk-136dki7"}
      ref={scope}
      role="img"
      aria-label={label}
    >
      <style>{css}</style>
      <path d="M10 90 L40 10 L70 90 Z" fill="#E30613" className="sk-136dki7-0" />
      <polyline points="80,90 110,10 140,90" fill="none" stroke="#1D1D1B" strokeWidth="4" strokeMiterlimit="10" className="sk-136dki7-0" />
      <path d="M150 90 L190 10" fill="none" stroke="#1D1D1B" strokeWidth="5" strokeMiterlimit="10" className="sk-136dki7-0" />
      <ellipse id="accent" cx="170" cy="70" rx="12" ry="8" fill="#2563eb" className="sk-136dki7-0" />
      <line x1="10" y1="95" x2="190" y2="95" fill="none" stroke="#10b981" strokeWidth="4" strokeMiterlimit="10" className="sk-136dki7-0" />
    </svg>
  );
}
"
`;

exports[`exporters.motion > pulse × simple-stroke.svg 1`] = `
""use client";

import {
  type AnimationOptions,
  type AnimationPlaybackControls,
  type DOMKeyframesDefinition,
  useAnimate,
  useReducedMotion,
} from "motion/react";
import { useEffect, useRef } from "react";

// Generated by strokit. Colors follow --sk-stroke; prefers-reduced-motion shows the final frame.
const css = \`
.sk-72lg8e-0 {
  transform-box: fill-box;
  transform-origin: center;
  opacity: 1;
  transform: scale(1);
}
@media (prefers-reduced-motion: reduce) {
  .sk-72lg8e * {
    animation: none;
  }
  .sk-72lg8e-0 {
    opacity: 1;
    transform: none;
  }
}
\`;

type Track = { selector: string; keyframes: DOMKeyframesDefinition; options: AnimationOptions };

const tracks: Track[] = [
  {
    selector: ".sk-72lg8e-0",
    keyframes: {
      opacity: [1, 0.5, 1],
      scale: [1, 1.06, 1],
    },
    options: {
      duration: 1.4,
      delay: 0,
      ease: "easeInOut",
      times: [0, 0.5, 1],
      repeat: Number.POSITIVE_INFINITY,
      repeatType: "loop",
    },
  },
];

export type TestLogoProps = {
  /** Width and height (number = px). Defaults to the SVG's own size. */
  size?: number | string;
  /** Playback speed multiplier: 2 plays twice as fast. */
  speed?: number;
  /** true repeats forever, false plays once. Defaults to the exported animation. */
  loop?: boolean;
  paused?: boolean;
  className?: string;
  /** Accessible name. Defaults to "Logo". */
  label?: string;
};

export function TestLogo({
  size,
  speed = 1,
  loop,
  paused = false,
  className,
  label = "Logo",
}: TestLogoProps) {
  const [scope, animate] = useAnimate<SVGSVGElement>();
  const reducedMotion = useReducedMotion();
  const controls = useRef<AnimationPlaybackControls[]>([]);

  useEffect(() => {
    if (reducedMotion) return;
    controls.current = tracks.map((track) =>
      animate(track.selector, track.keyframes, {
        ...track.options,
        ...(loop === undefined ? {} : { repeat: loop ? Number.POSITIVE_INFINITY : 0 }),
      }),
    );
    return () => {
      for (const control of controls.current) control.stop();
      controls.current = [];
    };
  }, [animate, loop, reducedMotion]);

  useEffect(() => {
    for (const control of controls.current) {
      control.speed = speed;
      if (paused) control.pause();
      else control.play();
    }
  }, [speed, paused, loop, reducedMotion]);

  return (
    <svg
      viewBox="0 0 120 120"
      width={size ?? 120}
      height={size ?? 120}
      className={className ? \`sk-72lg8e \${className}\` : "sk-72lg8e"}
      ref={scope}
      role="img"
      aria-label={label}
    >
      <style>{css}</style>
      <title>{"Anel e seta"}</title>
      <g fill="none" stroke="#1d4ed8" strokeWidth="6" strokeLinecap="round">
        <circle cx="60" cy="60" r="44" className="sk-72lg8e-0" />
        <path d="M36 64 L56 84 L88 40" className="sk-72lg8e-0" />
      </g>
    </svg>
  );
}
"
`;

exports[`exporters.motion > shine × illustrator-classes.svg 1`] = `
""use client";

import {
  type AnimationOptions,
  type AnimationPlaybackControls,
  type DOMKeyframesDefinition,
  useAnimate,
  useReducedMotion,
} from "motion/react";
import { useEffect, useRef } from "react";

// Generated by strokit. Colors follow --sk-stroke; prefers-reduced-motion shows the final frame.
const css = \`
.sk-14ip6ys-0 {
  transform: translate(-61.397px, 50px) skewX(20deg);
}
.sk-14ip6ys-1 {
  stop-color: var(--sk-shine, #fff);
}
@media (prefers-reduced-motion: reduce) {
  .sk-14ip6ys * {
    animation: none;
  }
}
\`;

type Track = { selector: string; keyframes: DOMKeyframesDefinition; options: AnimationOptions };

const tracks: Track[] = [
  {
    selector: ".sk-14ip6ys-0",
    keyframes: {
      transform: ["translate(-61.397px, 50px) skewX(20deg)", "translate(261.397px, 50px) skewX(20deg)", "translate(261.397px, 50px) skewX(20deg)"],
    },
    options: {
      duration: 1.6,
      delay: 0,
      ease: "easeInOut",
      times: [0, 0.6, 1],
      repeat: Number.POSITIVE_INFINITY,
      repeatType: "loop",
    },
  },
];

export type TestLogoProps = {
  /** Width and height (number = px). Defaults to the SVG's own size. */
  size?: number | string;
  /** Playback speed multiplier: 2 plays twice as fast. */
  speed?: number;
  /** true repeats forever, false plays once. Defaults to the exported animation. */
  loop?: boolean;
  paused?: boolean;
  className?: string;
  /** Accessible name. Defaults to "Logo". */
  label?: string;
};

export function TestLogo({
  size,
  speed = 1,
  loop,
  paused = false,
  className,
  label = "Logo",
}: TestLogoProps) {
  const [scope, animate] = useAnimate<SVGSVGElement>();
  const reducedMotion = useReducedMotion();
  const controls = useRef<AnimationPlaybackControls[]>([]);

  useEffect(() => {
    if (reducedMotion) return;
    controls.current = tracks.map((track) =>
      animate(track.selector, track.keyframes, {
        ...track.options,
        ...(loop === undefined ? {} : { repeat: loop ? Number.POSITIVE_INFINITY : 0 }),
      }),
    );
    return () => {
      for (const control of controls.current) control.stop();
      controls.current = [];
    };
  }, [animate, loop, reducedMotion]);

  useEffect(() => {
    for (const control of controls.current) {
      control.speed = speed;
      if (paused) control.pause();
      else control.play();
    }
  }, [speed, paused, loop, reducedMotion]);

  return (
    <svg
      viewBox="0 0 200 100"
      id="Layer_1"
      width={size}
      height={size}
      className={className ? \`sk-14ip6ys \${className}\` : "sk-14ip6ys"}
      ref={scope}
      role="img"
      aria-label={label}
    >
      <style>{css}</style>
      <path d="M10 90 L40 10 L70 90 Z" fill="#E30613" />
      <polyline points="80,90 110,10 140,90" fill="none" stroke="#1D1D1B" strokeWidth="4" strokeMiterlimit="10" />
      <path d="M150 90 L190 10" fill="none" stroke="#1D1D1B" strokeWidth="5" strokeMiterlimit="10" />
      <ellipse id="accent" cx="170" cy="70" rx="12" ry="8" fill="#2563eb" />
      <line x1="10" y1="95" x2="190" y2="95" fill="none" stroke="#10b981" strokeWidth="4" strokeMiterlimit="10" />
      <defs>
        <clipPath id="sk-14ip6ys-t0-clip">
          <path d="M10 90 L40 10 L70 90 Z" transform="matrix(1 0 0 1 0 0)" />
          <ellipse cx="170" cy="70" rx="12" ry="8" transform="matrix(1 0 0 1 0 0)" />
        </clipPath>
        <linearGradient id="sk-14ip6ys-t0-grad" x1="0" y1="0" x2="1" y2="0">
          <stop offset="0" stopOpacity="0" className="sk-14ip6ys-1" />
          <stop offset="0.5" stopOpacity="0.6" className="sk-14ip6ys-1" />
          <stop offset="1" stopOpacity="0" className="sk-14ip6ys-1" />
        </linearGradient>
      </defs>
      <g clipPath="url(#sk-14ip6ys-t0-clip)" pointerEvents="none" aria-hidden="true">
        <rect x="-25" y="-100" width="50" height="200" fill="url(#sk-14ip6ys-t0-grad)" className="sk-14ip6ys-0" />
      </g>
    </svg>
  );
}
"
`;

exports[`exporters.motion > shine × simple-stroke.svg 1`] = `
""use client";

import {
  type AnimationOptions,
  type AnimationPlaybackControls,
  type DOMKeyframesDefinition,
  useAnimate,
  useReducedMotion,
} from "motion/react";
import { useEffect, useRef } from "react";

// Generated by strokit. Colors follow --sk-stroke; prefers-reduced-motion shows the final frame.
const css = \`
@media (prefers-reduced-motion: reduce) {
  .sk-10hsa4j * {
    animation: none;
  }
}
\`;

type Track = { selector: string; keyframes: DOMKeyframesDefinition; options: AnimationOptions };

const tracks: Track[] = [];

export type TestLogoProps = {
  /** Width and height (number = px). Defaults to the SVG's own size. */
  size?: number | string;
  /** Playback speed multiplier: 2 plays twice as fast. */
  speed?: number;
  /** true repeats forever, false plays once. Defaults to the exported animation. */
  loop?: boolean;
  paused?: boolean;
  className?: string;
  /** Accessible name. Defaults to "Logo". */
  label?: string;
};

export function TestLogo({
  size,
  speed = 1,
  loop,
  paused = false,
  className,
  label = "Logo",
}: TestLogoProps) {
  const [scope, animate] = useAnimate<SVGSVGElement>();
  const reducedMotion = useReducedMotion();
  const controls = useRef<AnimationPlaybackControls[]>([]);

  useEffect(() => {
    if (reducedMotion) return;
    controls.current = tracks.map((track) =>
      animate(track.selector, track.keyframes, {
        ...track.options,
        ...(loop === undefined ? {} : { repeat: loop ? Number.POSITIVE_INFINITY : 0 }),
      }),
    );
    return () => {
      for (const control of controls.current) control.stop();
      controls.current = [];
    };
  }, [animate, loop, reducedMotion]);

  useEffect(() => {
    for (const control of controls.current) {
      control.speed = speed;
      if (paused) control.pause();
      else control.play();
    }
  }, [speed, paused, loop, reducedMotion]);

  return (
    <svg
      viewBox="0 0 120 120"
      width={size ?? 120}
      height={size ?? 120}
      className={className ? \`sk-10hsa4j \${className}\` : "sk-10hsa4j"}
      ref={scope}
      role="img"
      aria-label={label}
    >
      <style>{css}</style>
      <title>{"Anel e seta"}</title>
      <g fill="none" stroke="#1d4ed8" strokeWidth="6" strokeLinecap="round">
        <circle cx="60" cy="60" r="44" />
        <path d="M36 64 L56 84 L88 40" />
      </g>
    </svg>
  );
}
"
`;

exports[`exporters.motion > spin × illustrator-classes.svg 1`] = `
""use client";

import {
  type AnimationOptions,
  type AnimationPlaybackControls,
  type DOMKeyframesDefinition,
  useAnimate,
  useReducedMotion,
} from "motion/react";
import { useEffect, useRef } from "react";

// Generated by strokit. Colors follow --sk-stroke; prefers-reduced-motion shows the final frame.
const css = \`
.sk-kovugm-0 {
  transform-box: view-box;
  transform-origin: 100px 50px;
  transform: rotate(0deg);
}
@media (prefers-reduced-motion: reduce) {
  .sk-kovugm * {
    animation: none;
  }
  .sk-kovugm-0 {
    transform: none;
  }
}
\`;

type Track = { selector: string; keyframes: DOMKeyframesDefinition; options: AnimationOptions };

const tracks: Track[] = [
  {
    selector: ".sk-kovugm-0",
    keyframes: {
      transform: ["rotate(0deg)", "rotate(360deg)"],
    },
    options: {
      duration: 1.5,
      delay: 0,
      ease: "linear",
      times: [0, 1],
      repeat: Number.POSITIVE_INFINITY,
      repeatType: "loop",
    },
  },
];

export type TestLogoProps = {
  /** Width and height (number = px). Defaults to the SVG's own size. */
  size?: number | string;
  /** Playback speed multiplier: 2 plays twice as fast. */
  speed?: number;
  /** true repeats forever, false plays once. Defaults to the exported animation. */
  loop?: boolean;
  paused?: boolean;
  className?: string;
  /** Accessible name. Defaults to "Logo". */
  label?: string;
};

export function TestLogo({
  size,
  speed = 1,
  loop,
  paused = false,
  className,
  label = "Logo",
}: TestLogoProps) {
  const [scope, animate] = useAnimate<SVGSVGElement>();
  const reducedMotion = useReducedMotion();
  const controls = useRef<AnimationPlaybackControls[]>([]);

  useEffect(() => {
    if (reducedMotion) return;
    controls.current = tracks.map((track) =>
      animate(track.selector, track.keyframes, {
        ...track.options,
        ...(loop === undefined ? {} : { repeat: loop ? Number.POSITIVE_INFINITY : 0 }),
      }),
    );
    return () => {
      for (const control of controls.current) control.stop();
      controls.current = [];
    };
  }, [animate, loop, reducedMotion]);

  useEffect(() => {
    for (const control of controls.current) {
      control.speed = speed;
      if (paused) control.pause();
      else control.play();
    }
  }, [speed, paused, loop, reducedMotion]);

  return (
    <svg
      viewBox="0 0 200 100"
      id="Layer_1"
      width={size}
      height={size}
      className={className ? \`sk-kovugm \${className}\` : "sk-kovugm"}
      ref={scope}
      role="img"
      aria-label={label}
    >
      <style>{css}</style>
      <path d="M10 90 L40 10 L70 90 Z" fill="#E30613" className="sk-kovugm-0" />
      <polyline points="80,90 110,10 140,90" fill="none" stroke="#1D1D1B" strokeWidth="4" strokeMiterlimit="10" className="sk-kovugm-0" />
      <path d="M150 90 L190 10" fill="none" stroke="#1D1D1B" strokeWidth="5" strokeMiterlimit="10" className="sk-kovugm-0" />
      <ellipse id="accent" cx="170" cy="70" rx="12" ry="8" fill="#2563eb" className="sk-kovugm-0" />
      <line x1="10" y1="95" x2="190" y2="95" fill="none" stroke="#10b981" strokeWidth="4" strokeMiterlimit="10" className="sk-kovugm-0" />
    </svg>
  );
}
"
`;

exports[`exporters.motion > spin × simple-stroke.svg 1`] = `
""use client";

import {
  type AnimationOptions,
  type AnimationPlaybackControls,
  type DOMKeyframesDefinition,
  useAnimate,
  useReducedMotion,
} from "motion/react";
import { useEffect, useRef } from "react";

// Generated by strokit. Colors follow --sk-stroke; prefers-reduced-motion shows the final frame.
const css = \`
.sk-1rizvv3-0 {
  transform-box: view-box;
  transform-origin: 60px 60px;
  transform: rotate(0deg);
}
@media (prefers-reduced-motion: reduce) {
  .sk-1rizvv3 * {
    animation: none;
  }
  .sk-1rizvv3-0 {
    transform: none;
  }
}
\`;

type Track = { selector: string; keyframes: DOMKeyframesDefinition; options: AnimationOptions };

const tracks: Track[] = [
  {
    selector: ".sk-1rizvv3-0",
    keyframes: {
      transform: ["rotate(0deg)", "rotate(360deg)"],
    },
    options: {
      duration: 1.5,
      delay: 0,
      ease: "linear",
      times: [0, 1],
      repeat: Number.POSITIVE_INFINITY,
      repeatType: "loop",
    },
  },
];

export type TestLogoProps = {
  /** Width and height (number = px). Defaults to the SVG's own size. */
  size?: number | string;
  /** Playback speed multiplier: 2 plays twice as fast. */
  speed?: number;
  /** true repeats forever, false plays once. Defaults to the exported animation. */
  loop?: boolean;
  paused?: boolean;
  className?: string;
  /** Accessible name. Defaults to "Logo". */
  label?: string;
};

export function TestLogo({
  size,
  speed = 1,
  loop,
  paused = false,
  className,
  label = "Logo",
}: TestLogoProps) {
  const [scope, animate] = useAnimate<SVGSVGElement>();
  const reducedMotion = useReducedMotion();
  const controls = useRef<AnimationPlaybackControls[]>([]);

  useEffect(() => {
    if (reducedMotion) return;
    controls.current = tracks.map((track) =>
      animate(track.selector, track.keyframes, {
        ...track.options,
        ...(loop === undefined ? {} : { repeat: loop ? Number.POSITIVE_INFINITY : 0 }),
      }),
    );
    return () => {
      for (const control of controls.current) control.stop();
      controls.current = [];
    };
  }, [animate, loop, reducedMotion]);

  useEffect(() => {
    for (const control of controls.current) {
      control.speed = speed;
      if (paused) control.pause();
      else control.play();
    }
  }, [speed, paused, loop, reducedMotion]);

  return (
    <svg
      viewBox="0 0 120 120"
      width={size ?? 120}
      height={size ?? 120}
      className={className ? \`sk-1rizvv3 \${className}\` : "sk-1rizvv3"}
      ref={scope}
      role="img"
      aria-label={label}
    >
      <style>{css}</style>
      <title>{"Anel e seta"}</title>
      <g fill="none" stroke="#1d4ed8" strokeWidth="6" strokeLinecap="round">
        <circle cx="60" cy="60" r="44" className="sk-1rizvv3-0" />
        <path d="M36 64 L56 84 L88 40" className="sk-1rizvv3-0" />
      </g>
    </svg>
  );
}
"
`;

exports[`exporters.motion > yoyo × illustrator-classes.svg 1`] = `
""use client";

import {
  type AnimationOptions,
  type AnimationPlaybackControls,
  type DOMKeyframesDefinition,
  useAnimate,
  useReducedMotion,
} from "motion/react";
import { useEffect, useRef } from "react";

// Generated by strokit. Colors follow --sk-stroke; prefers-reduced-motion shows the final frame.
const css = \`
.sk-4091bl-0 {
  stroke: var(--sk-stroke, #E30613);
  stroke-width: 4;
  fill-opacity: 0.2;
  stroke-dasharray: 0.25 1;
  stroke-dashoffset: 0;
}
.sk-4091bl-1 {
  stroke: var(--sk-stroke, #1D1D1B);
  stroke-dasharray: 0.25 1;
  stroke-dashoffset: 0;
}
.sk-4091bl-2 {
  stroke: var(--sk-stroke, #2563eb);
  stroke-width: 4;
  fill-opacity: 0.2;
  stroke-dasharray: 0.25 1;
  stroke-dashoffset: 0;
}
.sk-4091bl-3 {
  stroke: var(--sk-stroke, #10b981);
  stroke-dasharray: 0.25 1;
  stroke-dashoffset: 0;
}
@media (prefers-reduced-motion: reduce) {
  .sk-4091bl * {
    animation: none;
  }
  .sk-4091bl-0 {
    stroke-dasharray: none;
    fill-opacity: 1;
  }
  .sk-4091bl-1 {
    stroke-dasharray: none;
  }
  .sk-4091bl-2 {
    stroke-dasharray: none;
    fill-opacity: 1;
  }
  .sk-4091bl-3 {
    stroke-dasharray: none;
  }
}
\`;

type Track = { selector: string; keyframes: DOMKeyframesDefinition; options: AnimationOptions };

const tracks: Track[] = [
  {
    selector: ".sk-4091bl-0",
    keyframes: {
      strokeDashoffset: [0, -0.75],
    },
    options: {
      duration: 1.2,
      delay: 0,
      ease: "easeInOut",
      times: [0, 1],
      repeat: Number.POSITIVE_INFINITY,
      repeatType: "reverse",
    },
  },
  {
    selector: ".sk-4091bl-1",
    keyframes: {
      strokeDashoffset: [0, -0.75],
    },
    options: {
      duration: 1.2,
      delay: 0,
      ease: "easeInOut",
      times: [0, 1],
      repeat: Number.POSITIVE_INFINITY,
      repeatType: "reverse",
    },
  },
  {
    selector: ".sk-4091bl-2",
    keyframes: {
      strokeDashoffset: [0, -0.75],
    },
    options: {
      duration: 1.2,
      delay: 0,
      ease: "easeInOut",
      times: [0, 1],
      repeat: Number.POSITIVE_INFINITY,
      repeatType: "reverse",
    },
  },
  {
    selector: ".sk-4091bl-3",
    keyframes: {
      strokeDashoffset: [0, -0.75],
    },
    options: {
      duration: 1.2,
      delay: 0,
      ease: "easeInOut",
      times: [0, 1],
      repeat: Number.POSITIVE_INFINITY,
      repeatType: "reverse",
    },
  },
];

export type TestLogoProps = {
  /** Width and height (number = px). Defaults to the SVG's own size. */
  size?: number | string;
  /** Playback speed multiplier: 2 plays twice as fast. */
  speed?: number;
  /** true repeats forever, false plays once. Defaults to the exported animation. */
  loop?: boolean;
  paused?: boolean;
  className?: string;
  /** Accessible name. Defaults to "Logo". */
  label?: string;
};

export function TestLogo({
  size,
  speed = 1,
  loop,
  paused = false,
  className,
  label = "Logo",
}: TestLogoProps) {
  const [scope, animate] = useAnimate<SVGSVGElement>();
  const reducedMotion = useReducedMotion();
  const controls = useRef<AnimationPlaybackControls[]>([]);

  useEffect(() => {
    if (reducedMotion) return;
    controls.current = tracks.map((track) =>
      animate(track.selector, track.keyframes, {
        ...track.options,
        ...(loop === undefined ? {} : { repeat: loop ? Number.POSITIVE_INFINITY : 0 }),
      }),
    );
    return () => {
      for (const control of controls.current) control.stop();
      controls.current = [];
    };
  }, [animate, loop, reducedMotion]);

  useEffect(() => {
    for (const control of controls.current) {
      control.speed = speed;
      if (paused) control.pause();
      else control.play();
    }
  }, [speed, paused, loop, reducedMotion]);

  return (
    <svg
      viewBox="0 0 200 100"
      id="Layer_1"
      width={size}
      height={size}
      className={className ? \`sk-4091bl \${className}\` : "sk-4091bl"}
      ref={scope}
      role="img"
      aria-label={label}
    >
      <style>{css}</style>
      <path d="M10 90 L40 10 L70 90 Z" fill="#E30613" pathLength="1" className="sk-4091bl-0" />
      <polyline points="80,90 110,10 140,90" fill="none" stroke="#1D1D1B" strokeWidth="4" strokeMiterlimit="10" pathLength="1" className="sk-4091bl-1" />
      <path d="M150 90 L190 10" fill="none" stroke="#1D1D1B" strokeWidth="5" strokeMiterlimit="10" pathLength="1" className="sk-4091bl-1" />
      <ellipse id="accent" cx="170" cy="70" rx="12" ry="8" fill="#2563eb" pathLength="1" className="sk-4091bl-2" />
      <line x1="10" y1="95" x2="190" y2="95" fill="none" stroke="#10b981" strokeWidth="4" strokeMiterlimit="10" pathLength="1" className="sk-4091bl-3" />
    </svg>
  );
}
"
`;

exports[`exporters.motion > yoyo × simple-stroke.svg 1`] = `
""use client";

import {
  type AnimationOptions,
  type AnimationPlaybackControls,
  type DOMKeyframesDefinition,
  useAnimate,
  useReducedMotion,
} from "motion/react";
import { useEffect, useRef } from "react";

// Generated by strokit. Colors follow --sk-stroke; prefers-reduced-motion shows the final frame.
const css = \`
.sk-1x1v386-0 {
  stroke: var(--sk-stroke, #1d4ed8);
  stroke-dasharray: 0.25 1;
  stroke-dashoffset: 0;
}
@media (prefers-reduced-motion: reduce) {
  .sk-1x1v386 * {
    animation: none;
  }
  .sk-1x1v386-0 {
    stroke-dasharray: none;
  }
}
\`;

type Track = { selector: string; keyframes: DOMKeyframesDefinition; options: AnimationOptions };

const tracks: Track[] = [
  {
    selector: ".sk-1x1v386-0",
    keyframes: {
      strokeDashoffset: [0, -0.75],
    },
    options: {
      duration: 1.2,
      delay: 0,
      ease: "easeInOut",
      times: [0, 1],
      repeat: Number.POSITIVE_INFINITY,
      repeatType: "reverse",
    },
  },
];

export type TestLogoProps = {
  /** Width and height (number = px). Defaults to the SVG's own size. */
  size?: number | string;
  /** Playback speed multiplier: 2 plays twice as fast. */
  speed?: number;
  /** true repeats forever, false plays once. Defaults to the exported animation. */
  loop?: boolean;
  paused?: boolean;
  className?: string;
  /** Accessible name. Defaults to "Logo". */
  label?: string;
};

export function TestLogo({
  size,
  speed = 1,
  loop,
  paused = false,
  className,
  label = "Logo",
}: TestLogoProps) {
  const [scope, animate] = useAnimate<SVGSVGElement>();
  const reducedMotion = useReducedMotion();
  const controls = useRef<AnimationPlaybackControls[]>([]);

  useEffect(() => {
    if (reducedMotion) return;
    controls.current = tracks.map((track) =>
      animate(track.selector, track.keyframes, {
        ...track.options,
        ...(loop === undefined ? {} : { repeat: loop ? Number.POSITIVE_INFINITY : 0 }),
      }),
    );
    return () => {
      for (const control of controls.current) control.stop();
      controls.current = [];
    };
  }, [animate, loop, reducedMotion]);

  useEffect(() => {
    for (const control of controls.current) {
      control.speed = speed;
      if (paused) control.pause();
      else control.play();
    }
  }, [speed, paused, loop, reducedMotion]);

  return (
    <svg
      viewBox="0 0 120 120"
      width={size ?? 120}
      height={size ?? 120}
      className={className ? \`sk-1x1v386 \${className}\` : "sk-1x1v386"}
      ref={scope}
      role="img"
      aria-label={label}
    >
      <style>{css}</style>
      <title>{"Anel e seta"}</title>
      <g fill="none" stroke="#1d4ed8" strokeWidth="6" strokeLinecap="round">
        <circle cx="60" cy="60" r="44" pathLength="1" className="sk-1x1v386-0" />
        <path d="M36 64 L56 84 L88 40" pathLength="1" className="sk-1x1v386-0" />
      </g>
    </svg>
  );
}
"
`;

exports[`exporters.react > comet × illustrator-classes.svg 1`] = `
"import type { CSSProperties } from "react";

// Generated by strokit. Colors follow --sk-stroke; prefers-reduced-motion shows the final frame.
const css = \`
.sk-1k6vic1-0 {
  stroke: var(--sk-stroke, #E30613);
  stroke-width: 4;
  fill-opacity: 0.2;
  stroke-dasharray: 0.2 0.8;
  animation: sk-1k6vic1-t0-comet calc(1600ms / var(--sk-speed, 1)) linear 0ms var(--sk-iterations, infinite) normal both;
  animation-play-state: var(--sk-play-state, running);
}
.sk-1k6vic1-1 {
  stroke: var(--sk-stroke, #1D1D1B);
  stroke-dasharray: 0.2 0.8;
  animation: sk-1k6vic1-t0-comet calc(1600ms / var(--sk-speed, 1)) linear 0ms var(--sk-iterations, infinite) normal both;
  animation-play-state: var(--sk-play-state, running);
}
.sk-1k6vic1-2 {
  stroke: var(--sk-stroke, #2563eb);
  stroke-width: 4;
  fill-opacity: 0.2;
  stroke-dasharray: 0.2 0.8;
  animation: sk-1k6vic1-t0-comet calc(1600ms / var(--sk-speed, 1)) linear 0ms var(--sk-iterations, infinite) normal both;
  animation-play-state: var(--sk-play-state, running);
}
.sk-1k6vic1-3 {
  stroke: var(--sk-stroke, #10b981);
  stroke-dasharray: 0.2 0.8;
  animation: sk-1k6vic1-t0-comet calc(1600ms / var(--sk-speed, 1)) linear 0ms var(--sk-iterations, infinite) normal both;
  animation-play-state: var(--sk-play-state, running);
}
@keyframes sk-1k6vic1-t0-comet {
  0% {
    stroke-dashoffset: 1;
  }
  100% {
    stroke-dashoffset: 0;
  }
}
@media (prefers-reduced-motion: reduce) {
  .sk-1k6vic1 * {
    animation: none;
  }
  .sk-1k6vic1-0 {
    stroke-dasharray: none;
    fill-opacity: 1;
  }
  .sk-1k6vic1-1 {
    stroke-dasharray: none;
  }
  .sk-1k6vic1-2 {
    stroke-dasharray: none;
    fill-opacity: 1;
  }
  .sk-1k6vic1-3 {
    stroke-dasharray: none;
  }
}
\`;

export type TestLogoProps = {
  /** Width and height (number = px). Defaults to the SVG's own size. */
  size?: number | string;
  /** Playback speed multiplier: 2 plays twice as fast. */
  speed?: number;
  /** true repeats forever, false plays once. Defaults to the exported animation. */
  loop?: boolean;
  paused?: boolean;
  className?: string;
  /** Accessible name. Defaults to "Logo". */
  label?: string;
};

export function TestLogo({
  size,
  speed = 1,
  loop,
  paused = false,
  className,
  label = "Logo",
}: TestLogoProps) {
  const style = {
    "--sk-speed": speed,
    "--sk-play-state": paused ? "paused" : "running",
    ...(loop === undefined ? {} : { "--sk-iterations": loop ? "infinite" : 1 }),
  } as CSSProperties;

  return (
    <svg
      viewBox="0 0 200 100"
      id="Layer_1"
      width={size}
      height={size}
      className={className ? \`sk-1k6vic1 \${className}\` : "sk-1k6vic1"}
      style={style}
      role="img"
      aria-label={label}
    >
      <style>{css}</style>
      <path d="M10 90 L40 10 L70 90 Z" fill="#E30613" pathLength="1" className="sk-1k6vic1-0" />
      <polyline points="80,90 110,10 140,90" fill="none" stroke="#1D1D1B" strokeWidth="4" strokeMiterlimit="10" pathLength="1" className="sk-1k6vic1-1" />
      <path d="M150 90 L190 10" fill="none" stroke="#1D1D1B" strokeWidth="5" strokeMiterlimit="10" pathLength="1" className="sk-1k6vic1-1" />
      <ellipse id="accent" cx="170" cy="70" rx="12" ry="8" fill="#2563eb" pathLength="1" className="sk-1k6vic1-2" />
      <line x1="10" y1="95" x2="190" y2="95" fill="none" stroke="#10b981" strokeWidth="4" strokeMiterlimit="10" pathLength="1" className="sk-1k6vic1-3" />
    </svg>
  );
}
"
`;

exports[`exporters.react > comet × simple-stroke.svg 1`] = `
"import type { CSSProperties } from "react";

// Generated by strokit. Colors follow --sk-stroke; prefers-reduced-motion shows the final frame.
const css = \`
.sk-1s7x3yk-0 {
  stroke: var(--sk-stroke, #1d4ed8);
  stroke-dasharray: 0.2 0.8;
  animation: sk-1s7x3yk-t0-comet calc(1600ms / var(--sk-speed, 1)) linear 0ms var(--sk-iterations, infinite) normal both;
  animation-play-state: var(--sk-play-state, running);
}
@keyframes sk-1s7x3yk-t0-comet {
  0% {
    stroke-dashoffset: 1;
  }
  100% {
    stroke-dashoffset: 0;
  }
}
@media (prefers-reduced-motion: reduce) {
  .sk-1s7x3yk * {
    animation: none;
  }
  .sk-1s7x3yk-0 {
    stroke-dasharray: none;
  }
}
\`;

export type TestLogoProps = {
  /** Width and height (number = px). Defaults to the SVG's own size. */
  size?: number | string;
  /** Playback speed multiplier: 2 plays twice as fast. */
  speed?: number;
  /** true repeats forever, false plays once. Defaults to the exported animation. */
  loop?: boolean;
  paused?: boolean;
  className?: string;
  /** Accessible name. Defaults to "Logo". */
  label?: string;
};

export function TestLogo({
  size,
  speed = 1,
  loop,
  paused = false,
  className,
  label = "Logo",
}: TestLogoProps) {
  const style = {
    "--sk-speed": speed,
    "--sk-play-state": paused ? "paused" : "running",
    ...(loop === undefined ? {} : { "--sk-iterations": loop ? "infinite" : 1 }),
  } as CSSProperties;

  return (
    <svg
      viewBox="0 0 120 120"
      width={size ?? 120}
      height={size ?? 120}
      className={className ? \`sk-1s7x3yk \${className}\` : "sk-1s7x3yk"}
      style={style}
      role="img"
      aria-label={label}
    >
      <style>{css}</style>
      <title>{"Anel e seta"}</title>
      <g fill="none" stroke="#1d4ed8" strokeWidth="6" strokeLinecap="round">
        <circle cx="60" cy="60" r="44" pathLength="1" className="sk-1s7x3yk-0" />
        <path d="M36 64 L56 84 L88 40" pathLength="1" className="sk-1s7x3yk-0" />
      </g>
    </svg>
  );
}
"
`;

exports[`exporters.react > draw-fill × illustrator-classes.svg 1`] = `
"import type { CSSProperties } from "react";

// Generated by strokit. Colors follow --sk-stroke; prefers-reduced-motion shows the final frame.
const css = \`
.sk-ea1tib-0 {
  stroke: var(--sk-stroke, #E30613);
  stroke-width: 4;
  stroke-dasharray: 1 1;
  animation: sk-ea1tib-t0-draw-fill calc(2000ms / var(--sk-speed, 1)) ease-in-out 0ms var(--sk-iterations, 1) normal both;
  animation-play-state: var(--sk-play-state, running);
}
.sk-ea1tib-1 {
  stroke: var(--sk-stroke, #1D1D1B);
  stroke-dasharray: 1 1;
  animation: sk-ea1tib-t0-draw-fill calc(2000ms / var(--sk-speed, 1)) ease-in-out 0ms var(--sk-iterations, 1) normal both;
  animation-play-state: var(--sk-play-state, running);
}
.sk-ea1tib-2 {
  stroke: var(--sk-stroke, #2563eb);
  stroke-width: 4;
  stroke-dasharray: 1 1;
  animation: sk-ea1tib-t0-draw-fill calc(2000ms / var(--sk-speed, 1)) ease-in-out 0ms var(--sk-iterations, 1) normal both;
  animation-play-state: var(--sk-play-state, running);
}
.sk-ea1tib-3 {
  stroke: var(--sk-stroke, #10b981);
  stroke-dasharray: 1 1;
  animation: sk-ea1tib-t0-draw-fill calc(2000ms / var(--sk-speed, 1)) ease-in-out 0ms var(--sk-iterations, 1) normal both;
  animation-play-state: var(--sk-play-state, running);
}
@keyframes sk-ea1tib-t0-draw-fill {
  0% {
    stroke-dashoffset: 1;
    fill-opacity: 0;
  }
  60% {
    stroke-dashoffset: 0;
    fill-opacity: 0;
  }
  100% {
    stroke-dashoffset: 0;
    fill-opacity: 1;
  }
}
@media (prefers-reduced-motion: reduce) {
  .sk-ea1tib * {
    animation: none;
  }
  .sk-ea1tib-0 {
    stroke-dashoffset: 0;
    fill-opacity: 1;
  }
  .sk-ea1tib-1 {
    stroke-dashoffset: 0;
    fill-opacity: 1;
  }
  .sk-ea1tib-2 {
    stroke-dashoffset: 0;
    fill-opacity: 1;
  }
  .sk-ea1tib-3 {
    stroke-dashoffset: 0;
    fill-opacity: 1;
  }
}
\`;

export type TestLogoProps = {
  /** Width and height (number = px). Defaults to the SVG's own size. */
  size?: number | string;
  /** Playback speed multiplier: 2 plays twice as fast. */
  speed?: number;
  /** true repeats forever, false plays once. Defaults to the exported animation. */
  loop?: boolean;
  paused?: boolean;
  className?: string;
  /** Accessible name. Defaults to "Logo". */
  label?: string;
};

export function TestLogo({
  size,
  speed = 1,
  loop,
  paused = false,
  className,
  label = "Logo",
}: TestLogoProps) {
  const style = {
    "--sk-speed": speed,
    "--sk-play-state": paused ? "paused" : "running",
    ...(loop === undefined ? {} : { "--sk-iterations": loop ? "infinite" : 1 }),
  } as CSSProperties;

  return (
    <svg
      viewBox="0 0 200 100"
      id="Layer_1"
      width={size}
      height={size}
      className={className ? \`sk-ea1tib \${className}\` : "sk-ea1tib"}
      style={style}
      role="img"
      aria-label={label}
    >
      <style>{css}</style>
      <path d="M10 90 L40 10 L70 90 Z" fill="#E30613" pathLength="1" className="sk-ea1tib-0" />
      <polyline points="80,90 110,10 140,90" fill="none" stroke="#1D1D1B" strokeWidth="4" strokeMiterlimit="10" pathLength="1" className="sk-ea1tib-1" />
      <path d="M150 90 L190 10" fill="none" stroke="#1D1D1B" strokeWidth="5" strokeMiterlimit="10" pathLength="1" className="sk-ea1tib-1" />
      <ellipse id="accent" cx="170" cy="70" rx="12" ry="8" fill="#2563eb" pathLength="1" className="sk-ea1tib-2" />
      <line x1="10" y1="95" x2="190" y2="95" fill="none" stroke="#10b981" strokeWidth="4" strokeMiterlimit="10" pathLength="1" className="sk-ea1tib-3" />
    </svg>
  );
}
"
`;

exports[`exporters.react > draw-fill × simple-stroke.svg 1`] = `
"import type { CSSProperties } from "react";

// Generated by strokit. Colors follow --sk-stroke; prefers-reduced-motion shows the final frame.
const css = \`
.sk-1jr4qne-0 {
  stroke: var(--sk-stroke, #1d4ed8);
  stroke-dasharray: 1 1;
  animation: sk-1jr4qne-t0-draw-fill calc(2000ms / var(--sk-speed, 1)) ease-in-out 0ms var(--sk-iterations, 1) normal both;
  animation-play-state: var(--sk-play-state, running);
}
@keyframes sk-1jr4qne-t0-draw-fill {
  0% {
    stroke-dashoffset: 1;
    fill-opacity: 0;
  }
  60% {
    stroke-dashoffset: 0;
    fill-opacity: 0;
  }
  100% {
    stroke-dashoffset: 0;
    fill-opacity: 1;
  }
}
@media (prefers-reduced-motion: reduce) {
  .sk-1jr4qne * {
    animation: none;
  }
  .sk-1jr4qne-0 {
    stroke-dashoffset: 0;
    fill-opacity: 1;
  }
}
\`;

export type TestLogoProps = {
  /** Width and height (number = px). Defaults to the SVG's own size. */
  size?: number | string;
  /** Playback speed multiplier: 2 plays twice as fast. */
  speed?: number;
  /** true repeats forever, false plays once. Defaults to the exported animation. */
  loop?: boolean;
  paused?: boolean;
  className?: string;
  /** Accessible name. Defaults to "Logo". */
  label?: string;
};

export function TestLogo({
  size,
  speed = 1,
  loop,
  paused = false,
  className,
  label = "Logo",
}: TestLogoProps) {
  const style = {
    "--sk-speed": speed,
    "--sk-play-state": paused ? "paused" : "running",
    ...(loop === undefined ? {} : { "--sk-iterations": loop ? "infinite" : 1 }),
  } as CSSProperties;

  return (
    <svg
      viewBox="0 0 120 120"
      width={size ?? 120}
      height={size ?? 120}
      className={className ? \`sk-1jr4qne \${className}\` : "sk-1jr4qne"}
      style={style}
      role="img"
      aria-label={label}
    >
      <style>{css}</style>
      <title>{"Anel e seta"}</title>
      <g fill="none" stroke="#1d4ed8" strokeWidth="6" strokeLinecap="round">
        <circle cx="60" cy="60" r="44" pathLength="1" className="sk-1jr4qne-0" />
        <path d="M36 64 L56 84 L88 40" pathLength="1" className="sk-1jr4qne-0" />
      </g>
    </svg>
  );
}
"
`;

exports[`exporters.react > fade × illustrator-classes.svg 1`] = `
"import type { CSSProperties } from "react";

// Generated by strokit. Colors follow --sk-stroke; prefers-reduced-motion shows the final frame.
const css = \`
.sk-1jz44ef-0 {
  animation: sk-1jz44ef-t0-fade calc(900ms / var(--sk-speed, 1)) ease-out 0ms var(--sk-iterations, 1) normal both;
  animation-play-state: var(--sk-play-state, running);
}
@keyframes sk-1jz44ef-t0-fade {
  0% {
    opacity: 0;
    transform: translate(0px, 8px);
  }
  100% {
    opacity: 1;
    transform: translate(0px, 0px);
  }
}
@media (prefers-reduced-motion: reduce) {
  .sk-1jz44ef * {
    animation: none;
  }
  .sk-1jz44ef-0 {
    opacity: 1;
    transform: none;
  }
}
\`;

export type TestLogoProps = {
  /** Width and height (number = px). Defaults to the SVG's own size. */
  size?: number | string;
  /** Playback speed multiplier: 2 plays twice as fast. */
  speed?: number;
  /** true repeats forever, false plays once. Defaults to the exported animation. */
  loop?: boolean;
  paused?: boolean;
  className?: string;
  /** Accessible name. Defaults to "Logo". */
  label?: string;
};

export function TestLogo({
  size,
  speed = 1,
  loop,
  paused = false,
  className,
  label = "Logo",
}: TestLogoProps) {
  const style = {
    "--sk-speed": speed,
    "--sk-play-state": paused ? "paused" : "running",
    ...(loop === undefined ? {} : { "--sk-iterations": loop ? "infinite" : 1 }),
  } as CSSProperties;

  return (
    <svg
      viewBox="0 0 200 100"
      id="Layer_1"
      width={size}
      height={size}
      className={className ? \`sk-1jz44ef \${className}\` : "sk-1jz44ef"}
      style={style}
      role="img"
      aria-label={label}
    >
      <style>{css}</style>
      <path d="M10 90 L40 10 L70 90 Z" fill="#E30613" className="sk-1jz44ef-0" />
      <polyline points="80,90 110,10 140,90" fill="none" stroke="#1D1D1B" strokeWidth="4" strokeMiterlimit="10" className="sk-1jz44ef-0" />
      <path d="M150 90 L190 10" fill="none" stroke="#1D1D1B" strokeWidth="5" strokeMiterlimit="10" className="sk-1jz44ef-0" />
      <ellipse id="accent" cx="170" cy="70" rx="12" ry="8" fill="#2563eb" className="sk-1jz44ef-0" />
      <line x1="10" y1="95" x2="190" y2="95" fill="none" stroke="#10b981" strokeWidth="4" strokeMiterlimit="10" className="sk-1jz44ef-0" />
    </svg>
  );
}
"
`;

exports[`exporters.react > fade × simple-stroke.svg 1`] = `
"import type { CSSProperties } from "react";

// Generated by strokit. Colors follow --sk-stroke; prefers-reduced-motion shows the final frame.
const css = \`
.sk-1n6syys-0 {
  animation: sk-1n6syys-t0-fade calc(900ms / var(--sk-speed, 1)) ease-out 0ms var(--sk-iterations, 1) normal both;
  animation-play-state: var(--sk-play-state, running);
}
@keyframes sk-1n6syys-t0-fade {
  0% {
    opacity: 0;
    transform: translate(0px, 9.6px);
  }
  100% {
    opacity: 1;
    transform: translate(0px, 0px);
  }
}
@media (prefers-reduced-motion: reduce) {
  .sk-1n6syys * {
    animation: none;
  }
  .sk-1n6syys-0 {
    opacity: 1;
    transform: none;
  }
}
\`;

export type TestLogoProps = {
  /** Width and height (number = px). Defaults to the SVG's own size. */
  size?: number | string;
  /** Playback speed multiplier: 2 plays twice as fast. */
  speed?: number;
  /** true repeats forever, false plays once. Defaults to the exported animation. */
  loop?: boolean;
  paused?: boolean;
  className?: string;
  /** Accessible name. Defaults to "Logo". */
  label?: string;
};

export function TestLogo({
  size,
  speed = 1,
  loop,
  paused = false,
  className,
  label = "Logo",
}: TestLogoProps) {
  const style = {
    "--sk-speed": speed,
    "--sk-play-state": paused ? "paused" : "running",
    ...(loop === undefined ? {} : { "--sk-iterations": loop ? "infinite" : 1 }),
  } as CSSProperties;

  return (
    <svg
      viewBox="0 0 120 120"
      width={size ?? 120}
      height={size ?? 120}
      className={className ? \`sk-1n6syys \${className}\` : "sk-1n6syys"}
      style={style}
      role="img"
      aria-label={label}
    >
      <style>{css}</style>
      <title>{"Anel e seta"}</title>
      <g fill="none" stroke="#1d4ed8" strokeWidth="6" strokeLinecap="round">
        <circle cx="60" cy="60" r="44" className="sk-1n6syys-0" />
        <path d="M36 64 L56 84 L88 40" className="sk-1n6syys-0" />
      </g>
    </svg>
  );
}
"
`;

exports[`exporters.react > march × illustrator-classes.svg 1`] = `
"import type { CSSProperties } from "react";

// Generated by strokit. Colors follow --sk-stroke; prefers-reduced-motion shows the final frame.
const css = \`
.sk-17putps-0 {
  stroke: var(--sk-stroke, #E30613);
  stroke-width: 4;
  fill-opacity: 0.2;
  stroke-dasharray: 0.0408 0.0306;
  animation: sk-17putps-t0-march calc(800ms / var(--sk-speed, 1)) linear 0ms var(--sk-iterations, infinite) normal both;
  animation-play-state: var(--sk-play-state, running);
}
.sk-17putps-1 {
  stroke: var(--sk-stroke, #1D1D1B);
  stroke-dasharray: 0.0408 0.0306;
  animation: sk-17putps-t0-march calc(800ms / var(--sk-speed, 1)) linear 0ms var(--sk-iterations, infinite) normal both;
  animation-play-state: var(--sk-play-state, running);
}
.sk-17putps-2 {
  stroke: var(--sk-stroke, #2563eb);
  stroke-width: 4;
  fill-opacity: 0.2;
  stroke-dasharray: 0.0408 0.0306;
  animation: sk-17putps-t0-march calc(800ms / var(--sk-speed, 1)) linear 0ms var(--sk-iterations, infinite) normal both;
  animation-play-state: var(--sk-play-state, running);
}
.sk-17putps-3 {
  stroke: var(--sk-stroke, #10b981);
  stroke-dasharray: 0.0408 0.0306;
  animation: sk-17putps-t0-march calc(800ms / var(--sk-speed, 1)) linear 0ms var(--sk-iterations, infinite) normal both;
  animation-play-state: var(--sk-play-state, running);
}
@keyframes sk-17putps-t0-march {
  0% {
    stroke-dashoffset: 0;
  }
  100% {
    stroke-dashoffset: -0.0714;
  }
}
@media (prefers-reduced-motion: reduce) {
  .sk-17putps * {
    animation: none;
  }
  .sk-17putps-0 {
    fill-opacity: 1;
  }
  .sk-17putps-2 {
    fill-opacity: 1;
  }
}
\`;

export type TestLogoProps = {
  /** Width and height (number = px). Defaults to the SVG's own size. */
  size?: number | string;
  /** Playback speed multiplier: 2 plays twice as fast. */
  speed?: number;
  /** true repeats forever, false plays once. Defaults to the exported animation. */
  loop?: boolean;
  paused?: boolean;
  className?: string;
  /** Accessible name. Defaults to "Logo". */
  label?: string;
};

export function TestLogo({
  size,
  speed = 1,
  loop,
  paused = false,
  className,
  label = "Logo",
}: TestLogoProps) {
  const style = {
    "--sk-speed": speed,
    "--sk-play-state": paused ? "paused" : "running",
    ...(loop === undefined ? {} : { "--sk-iterations": loop ? "infinite" : 1 }),
  } as CSSProperties;

  return (
    <svg
      viewBox="0 0 200 100"
      id="Layer_1"
      width={size}
      height={size}
      className={className ? \`sk-17putps \${className}\` : "sk-17putps"}
      style={style}
      role="img"
      aria-label={label}
    >
      <style>{css}</style>
      <path d="M10 90 L40 10 L70 90 Z" fill="#E30613" pathLength="1" className="sk-17putps-0" />
      <polyline points="80,90 110,10 140,90" fill="none" stroke="#1D1D1B" strokeWidth="4" strokeMiterlimit="10" pathLength="1" className="sk-17putps-1" />
      <path d="M150 90 L190 10" fill="none" stroke="#1D1D1B" strokeWidth="5" strokeMiterlimit="10" pathLength="1" className="sk-17putps-1" />
      <ellipse id="accent" cx="170" cy="70" rx="12" ry="8" fill="#2563eb" pathLength="1" className="sk-17putps-2" />
      <line x1="10" y1="95" x2="190" y2="95" fill="none" stroke="#10b981" strokeWidth="4" strokeMiterlimit="10" pathLength="1" className="sk-17putps-3" />
    </svg>
  );
}
"
`;

exports[`exporters.react > march × simple-stroke.svg 1`] = `
"import type { CSSProperties } from "react";

// Generated by strokit. Colors follow --sk-stroke; prefers-reduced-motion shows the final frame.
const css = \`
.sk-1eykk4r-0 {
  stroke: var(--sk-stroke, #1d4ed8);
  stroke-dasharray: 0.0408 0.0306;
  animation: sk-1eykk4r-t0-march calc(800ms / var(--sk-speed, 1)) linear 0ms var(--sk-iterations, infinite) normal both;
  animation-play-state: var(--sk-play-state, running);
}
@keyframes sk-1eykk4r-t0-march {
  0% {
    stroke-dashoffset: 0;
  }
  100% {
    stroke-dashoffset: -0.0714;
  }
}
@media (prefers-reduced-motion: reduce) {
  .sk-1eykk4r * {
    animation: none;
  }
}
\`;

export type TestLogoProps = {
  /** Width and height (number = px). Defaults to the SVG's own size. */
  size?: number | string;
  /** Playback speed multiplier: 2 plays twice as fast. */
  speed?: number;
  /** true repeats forever, false plays once. Defaults to the exported animation. */
  loop?: boolean;
  paused?: boolean;
  className?: string;
  /** Accessible name. Defaults to "Logo". */
  label?: string;
};

export function TestLogo({
  size,
  speed = 1,
  loop,
  paused = false,
  className,
  label = "Logo",
}: TestLogoProps) {
  const style = {
    "--sk-speed": speed,
    "--sk-play-state": paused ? "paused" : "running",
    ...(loop === undefined ? {} : { "--sk-iterations": loop ? "infinite" : 1 }),
  } as CSSProperties;

  return (
    <svg
      viewBox="0 0 120 120"
      width={size ?? 120}
      height={size ?? 120}
      className={className ? \`sk-1eykk4r \${className}\` : "sk-1eykk4r"}
      style={style}
      role="img"
      aria-label={label}
    >
      <style>{css}</style>
      <title>{"Anel e seta"}</title>
      <g fill="none" stroke="#1d4ed8" strokeWidth="6" strokeLinecap="round">
        <circle cx="60" cy="60" r="44" pathLength="1" className="sk-1eykk4r-0" />
        <path d="M36 64 L56 84 L88 40" pathLength="1" className="sk-1eykk4r-0" />
      </g>
    </svg>
  );
}
"
`;

exports[`exporters.react > pulse × illustrator-classes.svg 1`] = `
"import type { CSSProperties } from "react";

// Generated by strokit. Colors follow --sk-stroke; prefers-reduced-motion shows the final frame.
const css = \`
.sk-136dki7-0 {
  transform-box: fill-box;
  transform-origin: center;
  animation: sk-136dki7-t0-pulse calc(1400ms / var(--sk-speed, 1)) ease-in-out 0ms var(--sk-iterations, infinite) normal both;
  animation-play-state: var(--sk-play-state, running);
}
@keyframes sk-136dki7-t0-pulse {
  0% {
    opacity: 1;
    transform: scale(1);
  }
  50% {
    opacity: 0.5;
    transform: scale(1.06);
  }
  100% {
    opacity: 1;
    transform: scale(1);
  }
}
@media (prefers-reduced-motion: reduce) {
  .sk-136dki7 * {
    animation: none;
  }
  .sk-136dki7-0 {
    opacity: 1;
    transform: none;
  }
}
\`;

export type TestLogoProps = {
  /** Width and height (number = px). Defaults to the SVG's own size. */
  size?: number | string;
  /** Playback speed multiplier: 2 plays twice as fast. */
  speed?: number;
  /** true repeats forever, false plays once. Defaults to the exported animation. */
  loop?: boolean;
  paused?: boolean;
  className?: string;
  /** Accessible name. Defaults to "Logo". */
  label?: string;
};

export function TestLogo({
  size,
  speed = 1,
  loop,
  paused = false,
  className,
  label = "Logo",
}: TestLogoProps) {
  const style = {
    "--sk-speed": speed,
    "--sk-play-state": paused ? "paused" : "running",
    ...(loop === undefined ? {} : { "--sk-iterations": loop ? "infinite" : 1 }),
  } as CSSProperties;

  return (
    <svg
      viewBox="0 0 200 100"
      id="Layer_1"
      width={size}
      height={size}
      className={className ? \`sk-136dki7 \${className}\` : "sk-136dki7"}
      style={style}
      role="img"
      aria-label={label}
    >
      <style>{css}</style>
      <path d="M10 90 L40 10 L70 90 Z" fill="#E30613" className="sk-136dki7-0" />
      <polyline points="80,90 110,10 140,90" fill="none" stroke="#1D1D1B" strokeWidth="4" strokeMiterlimit="10" className="sk-136dki7-0" />
      <path d="M150 90 L190 10" fill="none" stroke="#1D1D1B" strokeWidth="5" strokeMiterlimit="10" className="sk-136dki7-0" />
      <ellipse id="accent" cx="170" cy="70" rx="12" ry="8" fill="#2563eb" className="sk-136dki7-0" />
      <line x1="10" y1="95" x2="190" y2="95" fill="none" stroke="#10b981" strokeWidth="4" strokeMiterlimit="10" className="sk-136dki7-0" />
    </svg>
  );
}
"
`;

exports[`exporters.react > pulse × simple-stroke.svg 1`] = `
"import type { CSSProperties } from "react";

// Generated by strokit. Colors follow --sk-stroke; prefers-reduced-motion shows the final frame.
const css = \`
.sk-72lg8e-0 {
  transform-box: fill-box;
  transform-origin: center;
  animation: sk-72lg8e-t0-pulse calc(1400ms / var(--sk-speed, 1)) ease-in-out 0ms var(--sk-iterations, infinite) normal both;
  animation-play-state: var(--sk-play-state, running);
}
@keyframes sk-72lg8e-t0-pulse {
  0% {
    opacity: 1;
    transform: scale(1);
  }
  50% {
    opacity: 0.5;
    transform: scale(1.06);
  }
  100% {
    opacity: 1;
    transform: scale(1);
  }
}
@media (prefers-reduced-motion: reduce) {
  .sk-72lg8e * {
    animation: none;
  }
  .sk-72lg8e-0 {
    opacity: 1;
    transform: none;
  }
}
\`;

export type TestLogoProps = {
  /** Width and height (number = px). Defaults to the SVG's own size. */
  size?: number | string;
  /** Playback speed multiplier: 2 plays twice as fast. */
  speed?: number;
  /** true repeats forever, false plays once. Defaults to the exported animation. */
  loop?: boolean;
  paused?: boolean;
  className?: string;
  /** Accessible name. Defaults to "Logo". */
  label?: string;
};

export function TestLogo({
  size,
  speed = 1,
  loop,
  paused = false,
  className,
  label = "Logo",
}: TestLogoProps) {
  const style = {
    "--sk-speed": speed,
    "--sk-play-state": paused ? "paused" : "running",
    ...(loop === undefined ? {} : { "--sk-iterations": loop ? "infinite" : 1 }),
  } as CSSProperties;

  return (
    <svg
      viewBox="0 0 120 120"
      width={size ?? 120}
      height={size ?? 120}
      className={className ? \`sk-72lg8e \${className}\` : "sk-72lg8e"}
      style={style}
      role="img"
      aria-label={label}
    >
      <style>{css}</style>
      <title>{"Anel e seta"}</title>
      <g fill="none" stroke="#1d4ed8" strokeWidth="6" strokeLinecap="round">
        <circle cx="60" cy="60" r="44" className="sk-72lg8e-0" />
        <path d="M36 64 L56 84 L88 40" className="sk-72lg8e-0" />
      </g>
    </svg>
  );
}
"
`;

exports[`exporters.react > shine × illustrator-classes.svg 1`] = `
"import type { CSSProperties } from "react";

// Generated by strokit. Colors follow --sk-stroke; prefers-reduced-motion shows the final frame.
const css = \`
.sk-14ip6ys-0 {
  transform: translate(-61.397px, 50px) skewX(20deg);
  animation: sk-14ip6ys-t0-shine calc(1600ms / var(--sk-speed, 1)) ease-in-out 0ms var(--sk-iterations, infinite) normal both;
  animation-play-state: var(--sk-play-state, running);
}
.sk-14ip6ys-1 {
  stop-color: var(--sk-shine, #fff);
}
@keyframes sk-14ip6ys-t0-shine {
  0% {
    transform: translate(-61.397px, 50px) skewX(20deg);
  }
  60% {
    transform: translate(261.397px, 50px) skewX(20deg);
  }
  100% {
    transform: translate(261.397px, 50px) skewX(20deg);
  }
}
@media (prefers-reduced-motion: reduce) {
  .sk-14ip6ys * {
    animation: none;
  }
}
\`;

export type TestLogoProps = {
  /** Width and height (number = px). Defaults to the SVG's own size. */
  size?: number | string;
  /** Playback speed multiplier: 2 plays twice as fast. */
  speed?: number;
  /** true repeats forever, false plays once. Defaults to the exported animation. */
  loop?: boolean;
  paused?: boolean;
  className?: string;
  /** Accessible name. Defaults to "Logo". */
  label?: string;
};

export function TestLogo({
  size,
  speed = 1,
  loop,
  paused = false,
  className,
  label = "Logo",
}: TestLogoProps) {
  const style = {
    "--sk-speed": speed,
    "--sk-play-state": paused ? "paused" : "running",
    ...(loop === undefined ? {} : { "--sk-iterations": loop ? "infinite" : 1 }),
  } as CSSProperties;

  return (
    <svg
      viewBox="0 0 200 100"
      id="Layer_1"
      width={size}
      height={size}
      className={className ? \`sk-14ip6ys \${className}\` : "sk-14ip6ys"}
      style={style}
      role="img"
      aria-label={label}
    >
      <style>{css}</style>
      <path d="M10 90 L40 10 L70 90 Z" fill="#E30613" />
      <polyline points="80,90 110,10 140,90" fill="none" stroke="#1D1D1B" strokeWidth="4" strokeMiterlimit="10" />
      <path d="M150 90 L190 10" fill="none" stroke="#1D1D1B" strokeWidth="5" strokeMiterlimit="10" />
      <ellipse id="accent" cx="170" cy="70" rx="12" ry="8" fill="#2563eb" />
      <line x1="10" y1="95" x2="190" y2="95" fill="none" stroke="#10b981" strokeWidth="4" strokeMiterlimit="10" />
      <defs>
        <clipPath id="sk-14ip6ys-t0-clip">
          <path d="M10 90 L40 10 L70 90 Z" transform="matrix(1 0 0 1 0 0)" />
          <ellipse cx="170" cy="70" rx="12" ry="8" transform="matrix(1 0 0 1 0 0)" />
        </clipPath>
        <linearGradient id="sk-14ip6ys-t0-grad" x1="0" y1="0" x2="1" y2="0">
          <stop offset="0" stopOpacity="0" className="sk-14ip6ys-1" />
          <stop offset="0.5" stopOpacity="0.6" className="sk-14ip6ys-1" />
          <stop offset="1" stopOpacity="0" className="sk-14ip6ys-1" />
        </linearGradient>
      </defs>
      <g clipPath="url(#sk-14ip6ys-t0-clip)" pointerEvents="none" aria-hidden="true">
        <rect x="-25" y="-100" width="50" height="200" fill="url(#sk-14ip6ys-t0-grad)" className="sk-14ip6ys-0" />
      </g>
    </svg>
  );
}
"
`;

exports[`exporters.react > shine × simple-stroke.svg 1`] = `
"import type { CSSProperties } from "react";

// Generated by strokit. Colors follow --sk-stroke; prefers-reduced-motion shows the final frame.
const css = \`
@media (prefers-reduced-motion: reduce) {
  .sk-10hsa4j * {
    animation: none;
  }
}
\`;

export type TestLogoProps = {
  /** Width and height (number = px). Defaults to the SVG's own size. */
  size?: number | string;
  /** Playback speed multiplier: 2 plays twice as fast. */
  speed?: number;
  /** true repeats forever, false plays once. Defaults to the exported animation. */
  loop?: boolean;
  paused?: boolean;
  className?: string;
  /** Accessible name. Defaults to "Logo". */
  label?: string;
};

export function TestLogo({
  size,
  speed = 1,
  loop,
  paused = false,
  className,
  label = "Logo",
}: TestLogoProps) {
  const style = {
    "--sk-speed": speed,
    "--sk-play-state": paused ? "paused" : "running",
    ...(loop === undefined ? {} : { "--sk-iterations": loop ? "infinite" : 1 }),
  } as CSSProperties;

  return (
    <svg
      viewBox="0 0 120 120"
      width={size ?? 120}
      height={size ?? 120}
      className={className ? \`sk-10hsa4j \${className}\` : "sk-10hsa4j"}
      style={style}
      role="img"
      aria-label={label}
    >
      <style>{css}</style>
      <title>{"Anel e seta"}</title>
      <g fill="none" stroke="#1d4ed8" strokeWidth="6" strokeLinecap="round">
        <circle cx="60" cy="60" r="44" />
        <path d="M36 64 L56 84 L88 40" />
      </g>
    </svg>
  );
}
"
`;

exports[`exporters.react > spin × illustrator-classes.svg 1`] = `
"import type { CSSProperties } from "react";

// Generated by strokit. Colors follow --sk-stroke; prefers-reduced-motion shows the final frame.
const css = \`
.sk-kovugm-0 {
  transform-box: view-box;
  transform-origin: 100px 50px;
  animation: sk-kovugm-t0-spin calc(1500ms / var(--sk-speed, 1)) linear 0ms var(--sk-iterations, infinite) normal both;
  animation-play-state: var(--sk-play-state, running);
}
@keyframes sk-kovugm-t0-spin {
  0% {
    transform: rotate(0deg);
  }
  100% {
    transform: rotate(360deg);
  }
}
@media (prefers-reduced-motion: reduce) {
  .sk-kovugm * {
    animation: none;
  }
  .sk-kovugm-0 {
    transform: none;
  }
}
\`;

export type TestLogoProps = {
  /** Width and height (number = px). Defaults to the SVG's own size. */
  size?: number | string;
  /** Playback speed multiplier: 2 plays twice as fast. */
  speed?: number;
  /** true repeats forever, false plays once. Defaults to the exported animation. */
  loop?: boolean;
  paused?: boolean;
  className?: string;
  /** Accessible name. Defaults to "Logo". */
  label?: string;
};

export function TestLogo({
  size,
  speed = 1,
  loop,
  paused = false,
  className,
  label = "Logo",
}: TestLogoProps) {
  const style = {
    "--sk-speed": speed,
    "--sk-play-state": paused ? "paused" : "running",
    ...(loop === undefined ? {} : { "--sk-iterations": loop ? "infinite" : 1 }),
  } as CSSProperties;

  return (
    <svg
      viewBox="0 0 200 100"
      id="Layer_1"
      width={size}
      height={size}
      className={className ? \`sk-kovugm \${className}\` : "sk-kovugm"}
      style={style}
      role="img"
      aria-label={label}
    >
      <style>{css}</style>
      <path d="M10 90 L40 10 L70 90 Z" fill="#E30613" className="sk-kovugm-0" />
      <polyline points="80,90 110,10 140,90" fill="none" stroke="#1D1D1B" strokeWidth="4" strokeMiterlimit="10" className="sk-kovugm-0" />
      <path d="M150 90 L190 10" fill="none" stroke="#1D1D1B" strokeWidth="5" strokeMiterlimit="10" className="sk-kovugm-0" />
      <ellipse id="accent" cx="170" cy="70" rx="12" ry="8" fill="#2563eb" className="sk-kovugm-0" />
      <line x1="10" y1="95" x2="190" y2="95" fill="none" stroke="#10b981" strokeWidth="4" strokeMiterlimit="10" className="sk-kovugm-0" />
    </svg>
  );
}
"
`;

exports[`exporters.react > spin × simple-stroke.svg 1`] = `
"import type { CSSProperties } from "react";

// Generated by strokit. Colors follow --sk-stroke; prefers-reduced-motion shows the final frame.
const css = \`
.sk-1rizvv3-0 {
  transform-box: view-box;
  transform-origin: 60px 60px;
  animation: sk-1rizvv3-t0-spin calc(1500ms / var(--sk-speed, 1)) linear 0ms var(--sk-iterations, infinite) normal both;
  animation-play-state: var(--sk-play-state, running);
}
@keyframes sk-1rizvv3-t0-spin {
  0% {
    transform: rotate(0deg);
  }
  100% {
    transform: rotate(360deg);
  }
}
@media (prefers-reduced-motion: reduce) {
  .sk-1rizvv3 * {
    animation: none;
  }
  .sk-1rizvv3-0 {
    transform: none;
  }
}
\`;

export type TestLogoProps = {
  /** Width and height (number = px). Defaults to the SVG's own size. */
  size?: number | string;
  /** Playback speed multiplier: 2 plays twice as fast. */
  speed?: number;
  /** true repeats forever, false plays once. Defaults to the exported animation. */
  loop?: boolean;
  paused?: boolean;
  className?: string;
  /** Accessible name. Defaults to "Logo". */
  label?: string;
};

export function TestLogo({
  size,
  speed = 1,
  loop,
  paused = false,
  className,
  label = "Logo",
}: TestLogoProps) {
  const style = {
    "--sk-speed": speed,
    "--sk-play-state": paused ? "paused" : "running",
    ...(loop === undefined ? {} : { "--sk-iterations": loop ? "infinite" : 1 }),
  } as CSSProperties;

  return (
    <svg
      viewBox="0 0 120 120"
      width={size ?? 120}
      height={size ?? 120}
      className={className ? \`sk-1rizvv3 \${className}\` : "sk-1rizvv3"}
      style={style}
      role="img"
      aria-label={label}
    >
      <style>{css}</style>
      <title>{"Anel e seta"}</title>
      <g fill="none" stroke="#1d4ed8" strokeWidth="6" strokeLinecap="round">
        <circle cx="60" cy="60" r="44" className="sk-1rizvv3-0" />
        <path d="M36 64 L56 84 L88 40" className="sk-1rizvv3-0" />
      </g>
    </svg>
  );
}
"
`;

exports[`exporters.react > yoyo × illustrator-classes.svg 1`] = `
"import type { CSSProperties } from "react";

// Generated by strokit. Colors follow --sk-stroke; prefers-reduced-motion shows the final frame.
const css = \`
.sk-4091bl-0 {
  stroke: var(--sk-stroke, #E30613);
  stroke-width: 4;
  fill-opacity: 0.2;
  stroke-dasharray: 0.25 1;
  animation: sk-4091bl-t0-yoyo calc(1200ms / var(--sk-speed, 1)) ease-in-out 0ms var(--sk-iterations, infinite) alternate both;
  animation-play-state: var(--sk-play-state, running);
}
.sk-4091bl-1 {
  stroke: var(--sk-stroke, #1D1D1B);
  stroke-dasharray: 0.25 1;
  animation: sk-4091bl-t0-yoyo calc(1200ms / var(--sk-speed, 1)) ease-in-out 0ms var(--sk-iterations, infinite) alternate both;
  animation-play-state: var(--sk-play-state, running);
}
.sk-4091bl-2 {
  stroke: var(--sk-stroke, #2563eb);
  stroke-width: 4;
  fill-opacity: 0.2;
  stroke-dasharray: 0.25 1;
  animation: sk-4091bl-t0-yoyo calc(1200ms / var(--sk-speed, 1)) ease-in-out 0ms var(--sk-iterations, infinite) alternate both;
  animation-play-state: var(--sk-play-state, running);
}
.sk-4091bl-3 {
  stroke: var(--sk-stroke, #10b981);
  stroke-dasharray: 0.25 1;
  animation: sk-4091bl-t0-yoyo calc(1200ms / var(--sk-speed, 1)) ease-in-out 0ms var(--sk-iterations, infinite) alternate both;
  animation-play-state: var(--sk-play-state, running);
}
@keyframes sk-4091bl-t0-yoyo {
  0% {
    stroke-dashoffset: 0;
  }
  100% {
    stroke-dashoffset: -0.75;
  }
}
@media (prefers-reduced-motion: reduce) {
  .sk-4091bl * {
    animation: none;
  }
  .sk-4091bl-0 {
    stroke-dasharray: none;
    fill-opacity: 1;
  }
  .sk-4091bl-1 {
    stroke-dasharray: none;
  }
  .sk-4091bl-2 {
    stroke-dasharray: none;
    fill-opacity: 1;
  }
  .sk-4091bl-3 {
    stroke-dasharray: none;
  }
}
\`;

export type TestLogoProps = {
  /** Width and height (number = px). Defaults to the SVG's own size. */
  size?: number | string;
  /** Playback speed multiplier: 2 plays twice as fast. */
  speed?: number;
  /** true repeats forever, false plays once. Defaults to the exported animation. */
  loop?: boolean;
  paused?: boolean;
  className?: string;
  /** Accessible name. Defaults to "Logo". */
  label?: string;
};

export function TestLogo({
  size,
  speed = 1,
  loop,
  paused = false,
  className,
  label = "Logo",
}: TestLogoProps) {
  const style = {
    "--sk-speed": speed,
    "--sk-play-state": paused ? "paused" : "running",
    ...(loop === undefined ? {} : { "--sk-iterations": loop ? "infinite" : 1 }),
  } as CSSProperties;

  return (
    <svg
      viewBox="0 0 200 100"
      id="Layer_1"
      width={size}
      height={size}
      className={className ? \`sk-4091bl \${className}\` : "sk-4091bl"}
      style={style}
      role="img"
      aria-label={label}
    >
      <style>{css}</style>
      <path d="M10 90 L40 10 L70 90 Z" fill="#E30613" pathLength="1" className="sk-4091bl-0" />
      <polyline points="80,90 110,10 140,90" fill="none" stroke="#1D1D1B" strokeWidth="4" strokeMiterlimit="10" pathLength="1" className="sk-4091bl-1" />
      <path d="M150 90 L190 10" fill="none" stroke="#1D1D1B" strokeWidth="5" strokeMiterlimit="10" pathLength="1" className="sk-4091bl-1" />
      <ellipse id="accent" cx="170" cy="70" rx="12" ry="8" fill="#2563eb" pathLength="1" className="sk-4091bl-2" />
      <line x1="10" y1="95" x2="190" y2="95" fill="none" stroke="#10b981" strokeWidth="4" strokeMiterlimit="10" pathLength="1" className="sk-4091bl-3" />
    </svg>
  );
}
"
`;

exports[`exporters.react > yoyo × simple-stroke.svg 1`] = `
"import type { CSSProperties } from "react";

// Generated by strokit. Colors follow --sk-stroke; prefers-reduced-motion shows the final frame.
const css = \`
.sk-1x1v386-0 {
  stroke: var(--sk-stroke, #1d4ed8);
  stroke-dasharray: 0.25 1;
  animation: sk-1x1v386-t0-yoyo calc(1200ms / var(--sk-speed, 1)) ease-in-out 0ms var(--sk-iterations, infinite) alternate both;
  animation-play-state: var(--sk-play-state, running);
}
@keyframes sk-1x1v386-t0-yoyo {
  0% {
    stroke-dashoffset: 0;
  }
  100% {
    stroke-dashoffset: -0.75;
  }
}
@media (prefers-reduced-motion: reduce) {
  .sk-1x1v386 * {
    animation: none;
  }
  .sk-1x1v386-0 {
    stroke-dasharray: none;
  }
}
\`;

export type TestLogoProps = {
  /** Width and height (number = px). Defaults to the SVG's own size. */
  size?: number | string;
  /** Playback speed multiplier: 2 plays twice as fast. */
  speed?: number;
  /** true repeats forever, false plays once. Defaults to the exported animation. */
  loop?: boolean;
  paused?: boolean;
  className?: string;
  /** Accessible name. Defaults to "Logo". */
  label?: string;
};

export function TestLogo({
  size,
  speed = 1,
  loop,
  paused = false,
  className,
  label = "Logo",
}: TestLogoProps) {
  const style = {
    "--sk-speed": speed,
    "--sk-play-state": paused ? "paused" : "running",
    ...(loop === undefined ? {} : { "--sk-iterations": loop ? "infinite" : 1 }),
  } as CSSProperties;

  return (
    <svg
      viewBox="0 0 120 120"
      width={size ?? 120}
      height={size ?? 120}
      className={className ? \`sk-1x1v386 \${className}\` : "sk-1x1v386"}
      style={style}
      role="img"
      aria-label={label}
    >
      <style>{css}</style>
      <title>{"Anel e seta"}</title>
      <g fill="none" stroke="#1d4ed8" strokeWidth="6" strokeLinecap="round">
        <circle cx="60" cy="60" r="44" pathLength="1" className="sk-1x1v386-0" />
        <path d="M36 64 L56 84 L88 40" pathLength="1" className="sk-1x1v386-0" />
      </g>
    </svg>
  );
}
"
`;
